--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -567,8 +567,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Olete lisanud maksimaalse arvu sõrmejälgi"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Rohkem sõrmejälgi ei saa lisada"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Kustuta „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>”"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"See kustutab sõrmejäljega „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“ seotud sõrmejäljekujutised ja -mudeli, mis on teie seadmesse salvestatud"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Te ei saa oma sõrmejälge kasutades telefoni avada ega rakendustes oma isikut kinnitada."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"See kustutab sõrmejäljega „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“ seotud sõrmejäljekujutised ja -mudeli, mis on teie telefoni salvestatud"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"See kustutab sõrmejäljega „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“ seotud sõrmejäljekujutised ja -mudeli, mis on teie tahvelarvutisse salvestatud"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"See kustutab sõrmejäljega „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“ seotud sõrmejäljekujutised ja -mudeli, mis on teie seadmesse salvestatud"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Te ei saa oma sõrmejälge kasutades telefoni avada ega rakendustes oma isikut kinnitada."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Te ei saa oma sõrmejälge kasutades tahvelarvutit avada ega rakendustes oma isikut kinnitada."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Te ei saa oma sõrmejälge kasutades seadet avada ega rakendustes oma isikut kinnitada."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Te ei saa oma sõrmejälge kasutades tööprofiili avada, oste volitada ega töörakendustesse sisse logida."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Krüpteerimine"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Krüpteeri tahvelarvuti"</string>
@@ -1098,6 +1102,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Täiseraldusvõime kasutab rohkem akut. Teie eraldusvõimele lülitumine võib mõne rakenduse taaskäivitada."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"Värvid"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Loomulikud"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Võimendatud"</string>
@@ -1310,14 +1316,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Ärge eemaldage teisaldamise ajal üksust <xliff:g id="NAME">^1</xliff:g>. \n\nRakendus <xliff:g id="APP">^2</xliff:g> pole seadmes saadaval enne, kui teisaldamine on lõpetatud."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Kuidas seadet <xliff:g id="NAME">^1</xliff:g> kasutate?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"SD-kaardi sisemiseks salvestusruumiks vormindamine"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Salvestage rakendusi ja meediat vaid selles tahvelarvutis kasutamiseks. &lt;a href=https://support.google.com/android/answer/12153449&gt;Lisateave SD-kaardi seadistamise kohta&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Vorminda"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"SD-kaardi sisemiseks salvestusruumiks vormindamine"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Salvestage rakendusi ja meediat vaid selles telefonis kasutamiseks. &lt;a href=https://support.google.com/android/answer/12153449&gt;Lisateave SD-kaardi seadistamise kohta&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Vorminda"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Või"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"SD-kaardi teisald. salvestusruumiks vormindamine"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Salvestage fotosid, videoid, muusikat ja muud ning pääsege nendele teistes seadmetes juurde. &lt;a href=https://support.google.com/android/answer/12153449&gt;Lisateave SD-kaardi seadistamise kohta&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Vorminda"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Seadista hiljem"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Kas vormindada seade <xliff:g id="NAME">^1</xliff:g>?"</string>
@@ -1851,12 +1860,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"Pärast vidina loomist pääseb rakendus juurde kõigele, mis on kuvatud.\n\nRakendus: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nVidin: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"Luba rakendusel <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> alati vidinaid luua ja nende andmetele juurdepääs hankida"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"Kasutusstatistika"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"Sordi kasutusaja järgi"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"Sordi viimatise kasutuse järgi"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"Sordi rakenduse nime järgi"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"Viimane kasutamine"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"Kasutusaeg"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"Juurdepääsetavus"</string>
@@ -4772,8 +4778,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Preemiaid ühe sündmuse kohta"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Preemiaid sekundis sündmuse jooksul"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"Maksimaalne preemiate arv päevas"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"Rakenduse installimine"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Tipptegevus"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Märguannet vaadati"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Märguannet vaadati 15 minuti jooksul"</string>
@@ -4835,24 +4840,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Vale parool"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Kuulamise alustamiseks paigutage QR-kood allpool keskele"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR-kood ei ole sobilik vorming"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Sisseehitatud mobiilirakendused"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Sisseehitatud mobiilirakendused"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Sisseehitatud mobiilirakenduste läbipaistvuse teave"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Sisaldab reklaame"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Arendaja(te) teave"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Kontaktteave"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Kirjeldus"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Privaatsuseeskirjad"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategooria"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Sisseehitatud mobiilirakendus"</string>
 </resources>
