--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"حداکثر تعداد اثرانگشت را اضافه کرده‌اید"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"نمی‌توانید اثرانگشت‌های بیشتری اضافه کنید"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"حذف کردن «<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>»"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"با این کار مدل و تصاویر اثر انگشت مرتبط با «<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» که در دستگاهتان ذخیره شده‌اند حذف می‌شوند"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"نمی‌توانید از اثر انگشت برای باز کردن قفل تلفن یا تأیید هویتتان در برنامه‌ها استفاده کنید."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"با این کار مدل و تصاویر اثر انگشت مرتبط با «<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» که در تلفنتان ذخیره شده‌اند حذف می‌شوند"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"با این کار مدل و تصاویر اثر انگشت مرتبط با «<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» که در رایانه لوحی‌تان ذخیره شده‌اند حذف می‌شوند"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"با این کار مدل و تصاویر اثر انگشت مرتبط با «<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» که در دستگاهتان ذخیره شده‌اند حذف می‌شوند"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"نمی‌توانید از اثر انگشت برای باز کردن قفل تلفن یا تأیید هویتتان در برنامه‌ها استفاده کنید."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"نمی‌توانید از اثر انگشت برای باز کردن قفل رایانه لوحی یا تأیید هویتتان در برنامه‌ها استفاده کنید."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"نمی‌توانید از اثر انگشت برای باز کردن قفل دستگاه یا تأیید هویتتان در برنامه‌ها استفاده کنید."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"نمی‌توانید از اثر انگشت برای باز کردن قفل نمایه کاری، اجازه دادن به خریدها، یا ورود به سیستم برنامه‌های کاری استفاده کنید."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"رمزگذاری"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"رمزگذاری رایانه لوحی"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+‎"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+‎"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"«وضوح کامل» از شارژ باتری بیشتری استفاده می‌کند. تغییر دادن وضوح ممکن است باعث شود برخی‌از برنامه‌ها بازراه‌اندازی شوند."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"انتخاب‌شده"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"رنگ‌"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"طبیعی"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"تقویت‌شده"</string>
@@ -1304,14 +1309,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"در طول انتقال، <xliff:g id="NAME">^1</xliff:g> را جدا نکنید. \n\nتا وقتی انتقال تکمیل نشود، برنامه <xliff:g id="APP">^2</xliff:g> در این دستگاه در دسترس نیست."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"چگونه از <xliff:g id="NAME">^1</xliff:g> استفاده خواهید کرد؟"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"‏قالب‌بندی کارت SD به‌عنوان حافظه داخلی"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"‏برنامه‌ها و رسانه‌ها را فقط برای استفاده در این رایانه لوحی ذخیره کنید. &lt;a href=https://support.google.com/android/answer/12153449&gt;درباره راه‌اندازی کارت SD بیشتر بدانید&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"قالب‌بندی"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"‏قالب‌بندی کارت SD به‌عنوان حافظه داخلی"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"‏برنامه‌ها و رسانه‌ها را فقط برای استفاده در این دستگاه ذخیره کنید. &lt;a href=https://support.google.com/android/answer/12153449&gt;درباره راه‌اندازی کارت SD بیشتر بدانید&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"قالب‌بندی"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"یا"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"‏قالب‌بندی کارت SD به‌عنوان فضای ذخیره‌سازی قابل‌حمل"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"‏عکس، ویدیو، موسیقی و غیره را ذخیره کنید و از دستگاه‌های دیگر به آن‌ها دسترسی داشته باشید. &lt;a href=https://support.google.com/android/answer/12153449&gt;درباره راه‌اندازی کارت SD بیشتر بدانید&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"قالب‌بندی"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"بعداً تنظیم شود"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"این <xliff:g id="NAME">^1</xliff:g> قالب‌بندی شود؟"</string>
@@ -1845,12 +1853,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"پس‌از اینکه ابزارک را ایجاد کردید، این برنامه می‌تواند به همه موارد نمایش داده‌شده دسترسی داشته باشد.\n\nبرنامه: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nابزارک: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"همیشه به <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> برای ایجاد ابزارک‌ها و دسترسی به اطلاعات آن‌ها اجازه داده شود"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"آمار کاربرد"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"مرتب کردن براساس زمان استفاده"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"مرتب کردن براساس آخرین استفاده"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"مرتب کردن براساس نام برنامه"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"آخرین زمان استفاده"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"زمان استفاده"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"دسترس‌پذیری"</string>
@@ -2752,7 +2757,7 @@
     <string name="vpn_create" msgid="7546073242936894638">"‏افزودن نمایه VPN"</string>
     <string name="vpn_menu_edit" msgid="5100387853773792379">"ویرایش نمایه"</string>
     <string name="vpn_menu_delete" msgid="4455966182219039928">"حذف نمایه"</string>
-    <string name="vpn_menu_lockdown" msgid="5284041663859541007">"‏VPN همیشه فعال"</string>
+    <string name="vpn_menu_lockdown" msgid="5284041663859541007">"‏VPN همیشه روشن"</string>
     <string name="vpn_no_vpns_added" msgid="7387080769821533728">"‏شبکه VPN اضافه نشده است"</string>
     <string name="vpn_always_on_summary" msgid="2171252372476858166">"‏همیشه به VPN‌ متصل بمانید"</string>
     <string name="vpn_always_on_summary_not_supported" msgid="9084872130449368437">"توسط این برنامه پشتیبانی نمی‌شود"</string>
@@ -4766,8 +4771,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"پاداش‌ها در هر رویداد تکی"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"پاداش به‌ازای هر ثانیه از مدت رویداد"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"حداکثر پاداش‌ها در روز"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"نصب برنامه"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"فعالیت برتر"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"اعلان دیده‌شده"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"اعلان دیده‌شده ظرف ۱۵ دقیقه"</string>
@@ -4829,24 +4833,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"گذرواژه اشتباه است"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"برای گوش دادن، رمزینه پاسخ‌سریع زیر را در مرکز کادر قرار دهید"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"قالب رمزینه پاسخ‌سریع نامعتبر است"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"برنامه‌های بسته‌ای تلفن همراه"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"برنامه‌های بسته‌ای تلفن همراه"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"اطلاعات شفاف‌سازی برنامه‌های بسته‌ای تلفن همراه"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"حاوی آگهی است"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"اطلاعات توسعه‌دهنده(ها)"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"اطلاعات تماس"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"شرح"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"خط‌مشی رازداری"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"دسته"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"برنامه بسته‌ای تلفن همراه"</string>
 </resources>
