--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"You’ve added the maximum number of fingerprints"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Can’t add more fingerprints"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"ລຶບ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\'"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"ນີ້ຈະລຶບຮູບ ແລະ ຮູບແບບລາຍນິ້ວມືທີ່ເຊື່ອມໂຍງກັບ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ທີ່ຈັດເກັບໄວ້ຢູ່ອຸປະກອນຂອງທ່ານອອກ"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"ທ່ານຈະບໍ່ສາມາດໃຊ້ລາຍນິ້ວມືຂອງທ່ານເພື່ອປົດລັອກໂທລະສັບຂອງທ່ານ ຫຼື ຢັ້ງຢືນວ່າແມ່ນທ່ານໃນແອັບໄດ້."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"ນີ້ຈະລຶບຮູບ ແລະ ຮູບແບບລາຍນິ້ວມືທີ່ເຊື່ອມໂຍງກັບ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ທີ່ຈັດເກັບໄວ້ຢູ່ໂທລະສັບຂອງທ່ານອອກ"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"ນີ້ຈະລຶບຮູບ ແລະ ຮູບແບບລາຍນິ້ວມືທີ່ເຊື່ອມໂຍງກັບ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ທີ່ຈັດເກັບໄວ້ຢູ່ແທັບເລັດຂອງທ່ານອອກ"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"ນີ້ຈະລຶບຮູບ ແລະ ຮູບແບບລາຍນິ້ວມືທີ່ເຊື່ອມໂຍງກັບ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ທີ່ຈັດເກັບໄວ້ຢູ່ອຸປະກອນຂອງທ່ານອອກ"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"ທ່ານຈະບໍ່ສາມາດໃຊ້ລາຍນິ້ວມືຂອງທ່ານເພື່ອປົດລັອກໂທລະສັບຂອງທ່ານ ຫຼື ຢັ້ງຢືນວ່າແມ່ນທ່ານໃນແອັບໄດ້."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"ທ່ານຈະບໍ່ສາມາດໃຊ້ລາຍນິ້ວມືຂອງທ່ານເພື່ອປົດລັອກແທັບເລັດຂອງທ່ານ ຫຼື ຢັ້ງຢືນວ່າແມ່ນທ່ານໃນແອັບໄດ້."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"ທ່ານຈະບໍ່ສາມາດໃຊ້ລາຍນິ້ວມືຂອງທ່ານເພື່ອປົດລັອກອຸປະກອນຂອງທ່ານ ຫຼື ຢັ້ງຢືນວ່າແມ່ນທ່ານໃນແອັບໄດ້."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"ທ່ານຈະບໍ່ສາມາດໃຊ້ລາຍນິ້ວມືຂອງທ່ານເພື່ອປົດລັອກໂປຣໄຟລ໌ບ່ອນເຮັດວຽກຂອງທ່ານ, ອະນຸມັດການສັ່ງຊືື້ ຫຼື ເຂົ້າສູ່ລະບົບຫາແອັບບ່ອນເຮັດວຽກໄດ້."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"ການເຂົ້າລະຫັດ"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"ເຂົ້າລະຫັດແທັບເລັດ"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"ຄວາມລະອຽດເຕັມຈະໃຊ້ແບັດເຕີຣີຂອງທ່ານຫຼາຍຂຶ້ນ. ການສະຫຼັບໄປໃຊ້ຄວາມລະອຽດຂອງທ່ານອາດເຮັດໃຫ້ບາງແອັບຣີສະຕາດໄດ້."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"ເລືອກແລ້ວ"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"ສີ"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"ທຳ​ມະ​ຊາດ"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"ສີເຂັ້ມຂຶ້ນ"</string>
@@ -1304,14 +1309,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"ຢ່າ​ເອົາ <xliff:g id="NAME">^1</xliff:g> ອອກ​ໄປ​ໃນ​ລະ​ຫວ່າງ​ການ​ຍ້າຍ. \n\nແອັບ <xliff:g id="APP">^2</xliff:g> ຢູ່​ໃນ​ອຸ​ປະ​ກອນ​ຈະ​ບໍ່​ມີ​ໃຫ້​ຈົນ​ກ່​ວາ​ສຳ​ເລັດ​ການ​ຍ້າຍ."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"ທ່ານຈະໃຊ້ <xliff:g id="NAME">^1</xliff:g> ນີ້ແນວໃດ?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"ຟໍແມັດ SD card ເພື່ອເປັນບ່ອນຈັດເກັບຂໍ້ມູນພາຍໃນ"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"ຈັດເກັບແອັບ ແລະ ມີເດຍທີ່ຈະໃຊ້ຢູ່ແທັບເລັດນີ້ເທົ່ານັ້ນ. &lt;a href=https://support.google.com/android/answer/12153449&gt;ສຶກສາເພີ່ມເຕີມກ່ຽວກັບການຕັ້ງຄ່າ SD card&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"ຈັດເກັບແອັບ ແລະ ມີເດຍທີ່ຈະໃຊ້ຢູ່ແທັບເລັດນີ້ເທົ່ານັ້ນ. &lt;a href=https://support.google.com/android/answer/12153449&gt;ສຶກສາເພີ່ມເຕີມກ່ຽວກັບການຕັ້ງຄ່າ SD card&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"ຟໍແມັດ"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"ຟໍແມັດ SD card ເພື່ອເປັນບ່ອນຈັດເກັບຂໍ້ມູນພາຍໃນ"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"ຈັດເກັບແອັບ ແລະ ມີເດຍທີ່ຈະໃຊ້ຢູ່ໂທລະສັບນີ້ເທົ່ານັ້ນ. &lt;a href=https://support.google.com/android/answer/12153449&gt;ສຶກສາເພີ່ມເຕີມກ່ຽວກັບການຕັ້ງຄ່າ SD card&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"ຈັດເກັບແອັບ ແລະ ມີເດຍທີ່ຈະໃຊ້ຢູ່ໂທລະສັບນີ້ເທົ່ານັ້ນ. &lt;a href=https://support.google.com/android/answer/12153449&gt;ສຶກສາເພີ່ມເຕີມກ່ຽວກັບການຕັ້ງຄ່າ SD card&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"ຟໍແມັດ"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"ຫຼື"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"ຟໍແມັດ SD card ເພື່ອເປັນບ່ອນຈັດເກັບຂໍ້ມູນແບບພົກແບບ"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"ຈັດເກັບຮູບພາບ, ວິດີໂອ, ເພງ ແລະ ອື່ນໆອີກ ພ້ອມທັງເຂົ້າເຖິງພວກມັນໄດ້ຈາກອຸປະກອນອື່ນໆ. &lt;a href=https://support.google.com/android/answer/12153449&gt;ສຶກສາເພີ່ມເຕີມກ່ຽວກັບການຕັ້ງຄ່າ SD card&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"ຈັດເກັບຮູບພາບ, ວິດີໂອ, ເພງ ແລະ ອື່ນໆອີກ ພ້ອມທັງເຂົ້າເຖິງພວກມັນໄດ້ຈາກອຸປະກອນອື່ນໆ. &lt;a href=https://support.google.com/android/answer/12153449&gt;ສຶກສາເພີ່ມເຕີມກ່ຽວກັບການຕັ້ງຄ່າ SD card&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"ຟໍແມັດ"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"ຕັ້ງຄ່າໃນພາຍຫຼັງ"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"ຟໍແມັດ <xliff:g id="NAME">^1</xliff:g> ນີ້ບໍ?"</string>
@@ -1845,12 +1850,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"ຫຼັງຈາກທ່ານສ້າງວິດເຈັດແລ້ວ, ແອັບພລິເຄຊັນຈະສາມາດເຂົ້າເຖິງທຸກຢ່າງທີ່ສະແດງຜົນໄດ້.\n\nແອັບພລິເຄຊັນ: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nວິດເຈັດ: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"ອະນຸຍາດໃຫ້ <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> ສ້າງວິກເຈັດ ແລະເຂົ້າເຖິງຂໍ້ມູນໄດ້ສະເໝີ"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"ສະຖິຕິການນຳໃຊ້"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"ຈັດຮຽງຕາມເວລາໃຊ້"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"ຈັດຮຽງຕາມເວລາທີ່ໃຊ້ຫຼ້າສຸດ"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"ຈັດຮຽງຕາມຊື່ແອັບ"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"ໃຊ້​ເທື່ອ​ສຸດ​ທ້າຍ"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"ເວລາການນຳໃຊ້"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"ການຊ່ວຍເຂົ້າເຖິງ"</string>
@@ -4766,8 +4768,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"ຮາງວັນຕໍ່ກິດຈະກຳດຽວ"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"ຮາງວັນຕໍ່ວິນາທີຂອງໄລຍະເວລາກິດຈະກຳ"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"ຮາງວັນສູງສຸດຕໍ່ມື້"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"ການຕິດຕັ້ງແອັບ"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"​ການເຄື່ອນ​ໄຫວ​ສູງ​ສຸດ"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"ເຫັນການແຈ້ງເຕືອນແລ້ວ"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"ເຫັນການແຈ້ງເຕືອນແລ້ວພາຍໃນ 15 ນາທີ"</string>
@@ -4829,24 +4830,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"ລະຫັດຜ່ານບໍ່ຖືກຕ້ອງ"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"ເພື່ອເລີ່ມການຟັງ, ໃຫ້ວາງລະຫັດ QR ທາງລຸ່ມນີ້ໄວ້ທາງກາງ"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"ຮູບແບບລະຫັດ QR ບໍ່ຖືກຕ້ອງ"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"ແອັບໂທລະສັບມືຖືແບບເປັນຊຸດ"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"ແອັບໂທລະສັບມືຖືແບບເປັນຊຸດ"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"ຂໍ້ມູນຄວາມໂປ່ງໃສແອັບໂທລະສັບມືຖືແບບເປັນຊຸດ"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"ມີໂຄສະນາ"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"ຂໍ້ມູນນັກພັດທະນາ"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"ຂໍ້ມູນການຕິດຕໍ່"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"ຄຳອະທິບາຍ"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"ນະໂຍບາຍຄວາມເປັນສ່ວນຕົວ"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"ໝວດໝູ່"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"ແອັບໂທລະສັບມືຖືແບບເປັນຊຸດ"</string>
 </resources>
