--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"നിങ്ങൾ പരമാവധി എണ്ണം ഫിംഗർപ്രിന്റുകൾ ചേർത്തിട്ടുണ്ട്"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"കൂടുതൽ ഫിംഗർപ്രിന്റുകൾ ചേർക്കാൻ കഴിയില്ല"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ഇല്ലാതാക്കുക"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' എന്നതുമായി ബന്ധപ്പെട്ട് നിങ്ങളുടെ ഉപകരണത്തിൽ സംഭരിച്ചിരിക്കുന്ന ഫിംഗർപ്രിന്റ് ചിത്രങ്ങളും മോഡലും ഇത് ഇല്ലാതാക്കുന്നു"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"ഫോൺ അൺലോക്ക് ചെയ്യാനോ ആപ്പുകളിൽ ഇത് നിങ്ങൾ തന്നെയാണെന്ന് പരിശോധിച്ചുറപ്പിക്കാനോ നിങ്ങളുടെ ഫിംഗർപ്രിന്റ് ഉപയോഗിക്കാനാകില്ല."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' എന്നതുമായി ബന്ധപ്പെട്ട് നിങ്ങളുടെ ഫോണിൽ സംഭരിച്ചിരിക്കുന്ന ഫിംഗർപ്രിന്റ് ചിത്രങ്ങളും മോഡലും ഇത് ഇല്ലാതാക്കുന്നു"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' എന്നതുമായി ബന്ധപ്പെട്ട് നിങ്ങളുടെ ടാബ്‌ലെറ്റിൽ സംഭരിച്ചിരിക്കുന്ന ഫിംഗർപ്രിന്റ് ചിത്രങ്ങളും മോഡലും ഇത് ഇല്ലാതാക്കുന്നു"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' എന്നതുമായി ബന്ധപ്പെട്ട് നിങ്ങളുടെ ഉപകരണത്തിൽ സംഭരിച്ചിരിക്കുന്ന ഫിംഗർപ്രിന്റ് ചിത്രങ്ങളും മോഡലും ഇത് ഇല്ലാതാക്കുന്നു"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"ഫോൺ അൺലോക്ക് ചെയ്യാനോ ആപ്പുകളിൽ ഇത് നിങ്ങൾ തന്നെയാണെന്ന് പരിശോധിച്ചുറപ്പിക്കാനോ നിങ്ങളുടെ ഫിംഗർപ്രിന്റ് ഉപയോഗിക്കാനാകില്ല."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"ടാബ്‌ലെറ്റ് അൺലോക്ക് ചെയ്യാനോ ആപ്പുകളിൽ ഇത് നിങ്ങൾ തന്നെയാണെന്ന് പരിശോധിച്ചുറപ്പിക്കാനോ നിങ്ങളുടെ ഫിംഗർപ്രിന്റ് ഉപയോഗിക്കാനാകില്ല."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"ഉപകരണം അൺലോക്ക് ചെയ്യാനോ ആപ്പുകളിൽ ഇത് നിങ്ങൾ തന്നെയാണെന്ന് പരിശോധിച്ചുറപ്പിക്കാനോ നിങ്ങളുടെ ഫിംഗർപ്രിന്റ് ഉപയോഗിക്കാനാകില്ല."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"നിങ്ങളുടെ ഔദ്യോഗിക പ്രൊഫൈൽ അൺലോക്ക് ചെയ്യാനോ വാങ്ങലുകൾ അംഗീകരിക്കാനോ ഔദ്യോഗിക ആപ്പുകളിലേക്ക് സൈൻ ഇൻ ചെയ്യാനോ ഫിംഗർപ്രിന്റ് ഉപയോഗിക്കാനാകില്ല."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"എൻ‌ക്രിപ്ഷൻ"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"ടാബ്‌ലെറ്റ് എൻ‌ക്രിപ്റ്റ് ചെയ്യുക"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"പൂർണ്ണ റെസല്യൂഷൻ കൂടുതൽ ബാറ്ററി ചാർജ് ഉപയോഗിക്കുന്നു. നിങ്ങളുടെ റെസല്യൂഷൻ മാറ്റുന്നത് ചില ആപ്പുകൾ റീസ്റ്റാർട്ട് ചെയ്യാൻ കാരണമായേക്കാം."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"തിരഞ്ഞെടുത്തു"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"നിറങ്ങൾ"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"സ്വാഭാവികം"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"ബൂസ്‌റ്റ് ചെയ്‌‌തത്"</string>
@@ -1304,14 +1309,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"നീക്കുന്നതിനിടെ <xliff:g id="NAME">^1</xliff:g> നീക്കംചെയ്യരുത്. \n\nനീക്കുന്ന പ്രവർത്തനം പൂർത്തിയാകുന്നതുവരെ ഈ ഉപകരണത്തിലെ <xliff:g id="APP">^2</xliff:g> അപ്ലിക്കേഷൻ ലഭ്യമാകില്ല."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"നിങ്ങൾ ഈ <xliff:g id="NAME">^1</xliff:g> എങ്ങനെ ഉപയോഗിക്കും?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"ഉള്ളിലെ മെമ്മറിക്കായി SD കാർഡ് ഫോർമാറ്റ് ചെയ്യുക"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"ഈ ടാബ്‌ലെറ്റിൽ മാത്രം ഉപയോഗിക്കുന്നതിനായി ആപ്പുകളും മീഡിയയും സംഭരിക്കുക. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD കാർഡ് സജ്ജീകരിക്കുന്നതിനെ കുറിച്ച് കൂടുതലറിയുക&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"ഫോർമാറ്റ് ചെയ്യുക"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"ഉള്ളിലെ മെമ്മറിക്കായി SD കാർഡ് ഫോർമാറ്റ് ചെയ്യുക"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"ഈ ഫോണിൽ മാത്രം ഉപയോഗിക്കുന്നതിനായി ആപ്പുകളും മീഡിയയും സംഭരിക്കുക. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD കാർഡ് സജ്ജീകരിക്കുന്നതിനെ കുറിച്ച് കൂടുതലറിയുക&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"ഫോർമാറ്റ് ചെയ്യുക"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"അല്ലെങ്കില്‍"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"പോർട്ടബിൾ സ്റ്റോറേജിന് SD കാർഡ് ഫോർമാറ്റ് ചെയ്യുക"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"ഫോട്ടോകളും വീഡിയോകളും സംഗീതവും മറ്റും സംഭരിക്കുക, മറ്റുപകരണങ്ങളിൽ നിന്ന് അവ ആക്സസ് ചെയ്യുക. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD കാർഡ് സജ്ജീകരിക്കുന്നതിനെ കുറിച്ച് കൂടുതലറിയുക&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"ഫോർമാറ്റ് ചെയ്യുക"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"പിന്നീട് സജ്ജീകരിക്കുക"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"ഈ <xliff:g id="NAME">^1</xliff:g> ഫോർമാറ്റ് ചെയ്യണോ?"</string>
@@ -1845,12 +1853,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"വിജറ്റ് സൃഷ്‌ടിച്ചതിനുശേഷം, പ്രദർശിപ്പിച്ചിരിക്കുന്ന എല്ലാം ആക്സസ് ചെയ്യാൻ ആപ്പിന് കഴിയും.\n\nആപ്പ്: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nവിജറ്റ്: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"<xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> എന്നതിനെ വിജറ്റുകൾ സൃഷ്‌ടിച്ച് അവയുടെ ഡാറ്റ ആക്‌സസ്സുചെയ്യാൻ എല്ലായ്പ്പോഴും അനുവദിക്കുക"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"ഉപയോഗ സ്ഥിതിവിവരക്കണക്ക്"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"ഉപയോഗിച്ച സമയ പ്രകാരം അടുക്കുക"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"അവസാനം ഉപയോഗിച്ച സമയം പ്രകാരം അടുക്കൂ"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"ആപ്പിന്റെ പേര് പ്രകാരം അടുക്കൂ"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"അവസാനം ഉപയോഗിച്ചത്"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"ഉപയോഗ സമയം"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"ഉപയോഗസഹായി"</string>
@@ -4766,8 +4771,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"ഓരോ ഇവന്റിനുമുള്ള റിവാർഡുകൾ"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"ഇവന്റ് കാലയളവിലെ ഒരു സെക്കൻഡിലെ റിവാർഡ്"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"ഓരോ ദിവസത്തെയും പരമാവധി റിവാർഡുകൾ"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"ആപ്പ് ഇൻസ്റ്റാൾ"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"മികച്ച പ്രവർത്തനം"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"അറിയിപ്പ് കണ്ടു"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"15 മിനിറ്റിനുള്ളിൽ അറിയിപ്പ് കണ്ടു"</string>
@@ -4829,24 +4833,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"പാസ്‌വേഡ് തെറ്റാണ്"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"കേട്ട് തുടങ്ങാൻ ചുവടെയുള്ള QR കോഡിലേക്ക് കേന്ദ്രീകരിക്കുക"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR കോഡ് സാധുവായ ഫോർമാറ്റിൽ അല്ല"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"ബണ്ടിൽ ചെയ്ത മൊബൈൽ ആപ്പുകൾ"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"ബണ്ടിൽ ചെയ്ത മൊബൈൽ ആപ്പുകൾ"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"ബണ്ടിൽ ചെയ്ത മൊബൈൽ ആപ്പുകളെ സംബന്ധിച്ച സുതാര്യതാ വിവരം"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"പരസ്യങ്ങൾ അടങ്ങിയിരിക്കുന്നു"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"ഡെവലപ്പറിൽ(മാരിൽ) നിന്നുള്ള വിവരം"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"കോൺടാക്റ്റ് വിവരങ്ങൾ"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"വിവരണം"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"സ്വകാര്യതാ നയം"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"വിഭാഗം"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"ബണ്ടിൽ ചെയ്ത മൊബൈൽ ആപ്പ്"</string>
 </resources>
