--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Anda telah menambahkan bilangan maksimum cap jari"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Tidak boleh menambahkan lagi cap jari"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Padamkan \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\'"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Ini akan memadamkan imej cap jari dan model yang berkaitan dengan \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' yang disimpan dalam peranti anda"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Anda tidak lagi dapat menggunakan cap jari anda untuk membuka kunci telefon atau mengesahkan diri dalam apl."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Tindakan ini akan memadamkan imej dan model cap jari yang berkaitan dengan \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' yang disimpan dalam telefon anda"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Tindakan ini akan memadamkan imej dan model cap jari yang berkaitan dengan \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' yang disimpan dalam tablet anda"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Ini akan memadamkan imej cap jari dan model yang berkaitan dengan \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' yang disimpan dalam peranti anda"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Anda tidak lagi dapat menggunakan cap jari anda untuk membuka kunci telefon atau mengesahkan diri dalam apl."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Anda tidak akan dapat menggunakan cap jari anda untuk membuka kunci tablet anda atau mengesahkan identiti anda dalam apl."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Anda tidak akan dapat menggunakan cap jari anda untuk membuka kunci peranti anda atau mengesahkan identiti anda dalam apl."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Anda tidak akan dapat menggunakan cap jari anda untuk membuka kunci profil kerja anda, membenarkan pembelian atau log masuk apl kerja."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Penyulitan"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Sulitkan tablet"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Peleraian penuh menggunakan lebih banyak bateri anda. Penukaran peleraian anda mungkin menyebabkan sesetengah apl dimulakan semula."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Dipilih"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Warna"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Asli"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Ditingkatkan"</string>
@@ -1304,14 +1309,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Jangan tanggalkan <xliff:g id="NAME">^1</xliff:g> semasa peralihan. \n\nApl <xliff:g id="APP">^2</xliff:g> pada peranti ini tidak akan tersedia sehingga peralihan selesai."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Bagaimanakah <xliff:g id="NAME">^1</xliff:g> akan digunakan?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formatkan kad SD untuk storan dalaman"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Simpan apl &amp; media untuk digunakan pada tablet ini sahaja. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ketahui lebih lanjut tentang persediaan kad SD&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Simpan apl &amp; media untuk digunakan pada tablet ini sahaja. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ketahui lebih lanjut tentang persediaan kad SD&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Format"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formatkan kad SD untuk storan dalaman"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Simpan apl &amp; media untuk digunakan pada telefon ini sahaja. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ketahui lebih lanjut tentang persediaan kad SD&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Simpan apl &amp; media untuk digunakan pada telefon ini sahaja. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ketahui lebih lanjut tentang persediaan kad SD&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Format"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Atau"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formatkan kad SD untuk storan mudah alih"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Simpan foto, video, muzik dan banyak lagi, serta akses daripada peranti lain. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ketahui lebih lanjut tentang persediaan kad SD&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Simpan foto, video, muzik dan banyak lagi, serta akses daripada peranti lain. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ketahui lebih lanjut tentang persediaan kad SD&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Format"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Sediakan kemudian"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Formatkan <xliff:g id="NAME">^1</xliff:g> ini?"</string>
@@ -1845,12 +1850,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"Selepas anda membuat widget, aplikasi boleh mengakses semua yang dipaparkan.\n\nAplikasi: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nWidget: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"Sentiasa benarkan <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> untuk membuat widget dan mengakses datanya"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"Statistik penggunaan"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"Isih mengikut masa penggunaan"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"Isih mengikut kali terakhir digunakan"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"Isih mengikut nama apl"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"Kali terakhir digunakan"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"Masa penggunaan"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"Kebolehaksesan"</string>
@@ -4766,8 +4768,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Ganjaran setiap satu peristiwa"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Ganjaran setiap saat tempoh peristiwa"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"Ganjaran Maksimum Setiap Hari"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"Pemasangan Apl"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Aktiviti Popular"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Pemberitahuan Dilihat"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Pemberitahuan Dilihat Dalam 15 Minit"</string>
@@ -4829,24 +4830,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Kata laluan salah"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Untuk mula mendengar, pusatkan kod QR di bawah"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"Kod QR bukan dalam format yang sah"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Apl himpunan mudah alih"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Apl himpunan mudah alih"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Maklumat ketelusan apl himpunan mudah alih"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Mengandungi iklan"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Maklumat Pembangun"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Maklumat Hubungan"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Perihalan"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Dasar Privasi"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategori"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Apl Himpunan Mudah Alih"</string>
 </resources>
