--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"ਤੁਸੀਂ ਫਿੰਗਰਪ੍ਰਿੰਟਾਂ ਦੀ ਅਧਿਕਤਮ ਸੰਖਿਆ ਨੂੰ ਸ਼ਾਮਲ ਕੀਤਾ ਹੋਇਆ ਹੈ"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"ਹੋਰ ਫਿੰਗਰਪ੍ਰਿੰਟਾਂ ਨੂੰ ਸ਼ਾਮਲ ਨਹੀਂ ਕੀਤਾ ਜਾ ਸਕਦਾ"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ਨੂੰ ਮਿਟਾਓ"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"ਇਹ ਤੁਹਾਡੇ ਡੀਵਾਈਸ \'ਤੇ ਸਟੋਰ ਕੀਤੇ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ਨਾਲ ਸੰਬੰਧਿਤ ਫਿੰਗਰਪ੍ਰਿੰਟ ਚਿੱਤਰਾਂ ਅਤੇ ਮਾਡਲ ਨੂੰ ਮਿਟਾ ਦਿੰਦੀ ਹੈ"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"ਤੁਸੀਂ ਆਪਣਾ ਫ਼ੋਨ ਅਣਲਾਕ ਕਰਨ ਜਾਂ ਐਪਾਂ ਵਿੱਚ ਆਪਣੀ ਪੁਸ਼ਟੀ ਕਰਨ ਲਈ ਆਪਣਾ ਫਿੰਗਰਪ੍ਰਿੰਟ ਨਹੀਂ ਵਰਤ ਸਕੋਗੇ।"</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"ਇਹ ਤੁਹਾਡੇ ਫ਼ੋਨ \'ਤੇ ਸਟੋਰ ਕੀਤੇ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ਨਾਲ ਸੰਬੰਧਿਤ ਫਿੰਗਰਪ੍ਰਿੰਟ ਚਿੱਤਰਾਂ ਅਤੇ ਮਾਡਲ ਨੂੰ ਮਿਟਾ ਦਿੰਦਾ ਹੈ"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"ਇਹ ਤੁਹਾਡੇ ਟੈਬਲੈੱਟ \'ਤੇ ਸਟੋਰ ਕੀਤੇ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ਨਾਲ ਸੰਬੰਧਿਤ ਫਿੰਗਰਪ੍ਰਿੰਟ ਚਿੱਤਰਾਂ ਅਤੇ ਮਾਡਲ ਨੂੰ ਮਿਟਾ ਦਿੰਦਾ ਹੈ"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"ਇਹ ਤੁਹਾਡੇ ਡੀਵਾਈਸ \'ਤੇ ਸਟੋਰ ਕੀਤੇ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ਨਾਲ ਸੰਬੰਧਿਤ ਫਿੰਗਰਪ੍ਰਿੰਟ ਚਿੱਤਰਾਂ ਅਤੇ ਮਾਡਲ ਨੂੰ ਮਿਟਾ ਦਿੰਦੀ ਹੈ"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"ਤੁਸੀਂ ਆਪਣਾ ਫ਼ੋਨ ਅਣਲਾਕ ਕਰਨ ਜਾਂ ਐਪਾਂ ਵਿੱਚ ਆਪਣੀ ਪੁਸ਼ਟੀ ਕਰਨ ਲਈ ਆਪਣਾ ਫਿੰਗਰਪ੍ਰਿੰਟ ਨਹੀਂ ਵਰਤ ਸਕੋਗੇ।"</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"ਤੁਸੀਂ ਆਪਣਾ ਟੈਬਲੈੱਟ ਅਣਲਾਕ ਕਰਨ ਜਾਂ ਐਪਾਂ ਵਿੱਚ ਆਪਣੀ ਪੁਸ਼ਟੀ ਕਰਨ ਲਈ ਆਪਣਾ ਫਿੰਗਰਪ੍ਰਿੰਟ ਨਹੀਂ ਵਰਤ ਸਕੋਗੇ।"</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"ਤੁਸੀਂ ਆਪਣਾ ਡੀਵਾਈਸ ਅਣਲਾਕ ਕਰਨ ਜਾਂ ਐਪਾਂ ਵਿੱਚ ਆਪਣੀ ਪੁਸ਼ਟੀ ਕਰਨ ਲਈ ਆਪਣਾ ਫਿੰਗਰਪ੍ਰਿੰਟ ਨਹੀਂ ਵਰਤ ਸਕੋਗੇ।"</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"ਤੁਸੀਂ ਆਪਣਾ ਕਾਰਜ ਪ੍ਰੋਫਾਈਲ ਅਣਲਾਕ ਕਰਨ, ਖਰੀਦਾਂ ਨੂੰ ਅਧਿਕਾਰਤ ਕਰਨ ਜਾਂ ਕਾਰਜ ਐਪਾਂ ਵਿੱਚ ਸਾਈਨ-ਇਨ ਕਰਨ ਲਈ ਆਪਣਾ ਫਿੰਗਰਪ੍ਰਿੰਟ ਨਹੀਂ ਵਰਤ ਸਕੋਗੇ।"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"ਇਨਕ੍ਰਿਪਸ਼ਨ"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"ਟੈਬਲੈੱਟ ਇਨਕ੍ਰਿਪਟ ਕਰੋ"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"ਪੂਰਾ ਰੈਜ਼ੋਲਿਊਸ਼ਨ ਤੁਹਾਡੀ ਬੈਟਰੀ ਦੀ ਜ਼ਿਆਦਾ ਵਰਤੋਂ ਕਰਦਾ ਹੈ। ਤੁਹਾਡੇ ਰੈਜ਼ੋਲਿਊਸ਼ਨ ਵਿੱਚ ਸਵਿੱਚ ਕਰਨ ਕਰਕੇ ਕੁਝ ਐਪਾਂ ਮੁੜ-ਸ਼ੁਰੂ ਹੋ ਸਕਦੀਆਂ ਹਨ।"</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"ਚੁਣਿਆ ਗਿਆ"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"ਰੰਗ"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"ਕੁਦਰਤੀ"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"ਵਧਾਇਆ ਗਿਆ"</string>
@@ -1304,14 +1309,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"ਮੂਵ ਦੇ ਦੌਰਾਨ <xliff:g id="NAME">^1</xliff:g> ਨੂੰ ਨਾ ਹਟਾਓ। \n\nਇਸ ਡੀਵਾਈਸ \'ਤੇ <xliff:g id="APP">^2</xliff:g> ਐਪ ਉਦੋਂ ਤੱਕ ਉਪਲਬਧ ਨਹੀਂ ਹੋਵੇਗੀ ਜਦੋਂ ਤੱਕ ਮੂਵ ਪੂਰਾ ਨਹੀਂ ਹੋ ਜਾਂਦਾ ਹੈ।"</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"ਤੁਸੀਂ ਇਸ <xliff:g id="NAME">^1</xliff:g> ਦੀ ਵਰਤੋਂ ਕਿਵੇਂ ਕਰੋਗੇ?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"ਅੰਦਰੂਨੀ ਸਟੋਰੇਜ ਲਈ SD ਕਾਰਡ ਨੂੰ ਫਾਰਮੈਟ ਕਰੋ"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"ਸਿਰਫ਼ ਇਸ ਟੈਬਲੈੱਟ \'ਤੇ ਵਰਤਣ ਲਈ ਐਪਾਂ ਅਤੇ ਮੀਡੀਆ ਨੂੰ ਸਟੋਰ ਕਰੋ। &lt;a href=https://support.google.com/android/answer/12153449&gt;ਇੱਕ SD ਕਾਰਡ ਦਾ ਸੈੱਟਅੱਪ ਕਰਨ ਬਾਰੇ ਹੋਰ ਜਾਣੋ&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"ਸਿਰਫ਼ ਇਸ ਟੈਬਲੈੱਟ \'ਤੇ ਵਰਤਣ ਲਈ ਐਪਾਂ ਅਤੇ ਮੀਡੀਆ ਨੂੰ ਸਟੋਰ ਕਰੋ। &lt;a href=https://support.google.com/android/answer/12153449&gt;SD ਕਾਰਡ ਦਾ ਸੈੱਟਅੱਪ ਕਰਨ ਬਾਰੇ ਹੋਰ ਜਾਣੋ&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"ਫਾਰਮੈਟ"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"ਅੰਦਰੂਨੀ ਸਟੋਰੇਜ ਲਈ SD ਕਾਰਡ ਨੂੰ ਫਾਰਮੈਟ ਕਰੋ"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"ਸਿਰਫ਼ ਇਸ ਫ਼ੋਨ \'ਤੇ ਵਰਤਣ ਲਈ ਐਪਾਂ ਅਤੇ ਮੀਡੀਆ ਨੂੰ ਸਟੋਰ ਕਰੋ। &lt;a href=https://support.google.com/android/answer/12153449&gt;ਇੱਕ SD ਕਾਰਡ ਦਾ ਸੈੱਟਅੱਪ ਕਰਨ ਬਾਰੇ ਹੋਰ ਜਾਣੋ&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"ਸਿਰਫ਼ ਇਸ ਫ਼ੋਨ \'ਤੇ ਵਰਤਣ ਲਈ ਐਪਾਂ ਅਤੇ ਮੀਡੀਆ ਨੂੰ ਸਟੋਰ ਕਰੋ। &lt;a href=https://support.google.com/android/answer/12153449&gt;SD ਕਾਰਡ ਦਾ ਸੈੱਟਅੱਪ ਕਰਨ ਬਾਰੇ ਹੋਰ ਜਾਣੋ&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"ਫਾਰਮੈਟ"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"ਜਾਂ"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"ਪੋਰਟੇਬਲ ਸਟੋਰੇਜ ਲਈ SD ਕਾਰਡ ਨੂੰ ਫਾਰਮੈਟ ਕਰੋ"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"ਫ਼ੋਟੋਆਂ, ਵੀਡੀਓ, ਸੰਗੀਤ ਅਤੇ ਹੋਰ ਚੀਜ਼ਾਂ ਨੂੰ ਸਟੋਰ ਕਰੋ ਅਤੇ ਉਨ੍ਹਾਂ ਤੱਕ ਹੋਰ ਡੀਵਾਈਸਾਂ \'ਤੇ ਪਹੁੰਚ ਕਰੋ। &lt;a href=https://support.google.com/android/answer/12153449&gt;ਇੱਕ SD ਕਾਰਡ ਦਾ ਸੈੱਟਅੱਪ ਕਰਨ ਬਾਰੇ ਹੋਰ ਜਾਣੋ&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"ਫ਼ੋਟੋਆਂ, ਵੀਡੀਓ, ਸੰਗੀਤ ਅਤੇ ਹੋਰ ਚੀਜ਼ਾਂ ਨੂੰ ਸਟੋਰ ਕਰੋ ਅਤੇ ਹੋਰ ਡੀਵਾਈਸਾਂ ਤੋਂ ਉਨ੍ਹਾਂ ਤੱਕ ਪਹੁੰਚ ਕਰੋ। &lt;a href=https://support.google.com/android/answer/12153449&gt;SD ਕਾਰਡ ਦਾ ਸੈੱਟਅੱਪ ਕਰਨ ਬਾਰੇ ਹੋਰ ਜਾਣੋ&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"ਫਾਰਮੈਟ"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"ਬਾਅਦ ਵਿੱਚ ਸੈੱਟਅੱਪ ਕਰੋ"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"ਕੀ ਇਸ <xliff:g id="NAME">^1</xliff:g> ਨੂੰ ਫਾਰਮੈਟ ਕਰਨਾ ਹੈ?"</string>
@@ -1845,12 +1850,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"ਤੁਹਾਡੇ ਵੱਲੋਂ ਵਿਜੇਟ ਬਣਾਉਣ ਤੋਂ ਬਾਅਦ, ਐਪਲੀਕੇਸ਼ਨ ਸਕ੍ਰੀਨ \'ਤੇ ਮੌਜੂਦ ਹਰ ਚੀਜ਼ ਤੱਕ ਪਹੁੰਚ ਕਰ ਸਕਦੀ ਹੈ।\n\nਐਪਲੀਕੇਸ਼ਨ: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nਵਿਜੇਟ: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"ਹਮੇਸ਼ਾਂ <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> ਨੂੰ ਵਿਜੇਟ ਬਣਾਉਣ ਅਤੇ ਉਹਨਾਂ ਦੇ ਡਾਟਾ ਤੱਕ ਪਹੁੰਚ ਦੀ ਆਗਿਆ ਦਿਓ"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"ਵਰਤੋਂ ਅੰਕੜੇ"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"ਵਰਤੋਂ ਸਮੇਂ ਮੁਤਾਬਕ ਕ੍ਰਮ-ਬੱਧ ਕਰੋ"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"ਪਿਛਲੀ ਵਰਤੋਂ ਮੁਤਾਬਕ ਕ੍ਰਮ-ਬੱਧ ਕਰੋ"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"ਐਪ ਦੇ ਨਾਮ ਮੁਤਾਬਕ ਕ੍ਰਮ-ਬੱਧ ਕਰੋ"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"ਆਖਰੀ ਵਾਰ ਵਰਤਿਆ"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"ਵਰਤੋਂ ਸਮਾਂ"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"ਪਹੁੰਚਯੋਗਤਾ"</string>
@@ -4766,8 +4768,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"ਹਰ ਇਕਹਿਰੇ ਇਵੈਂਟ ਲਈ ਇਨਾਮ"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"ਇਵੈਂਟ ਦੀ ਮਿਆਦ ਦੇ ਪ੍ਰਤੀ ਸਕਿੰਟ ਇਨਾਮ"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"ਹਰ ਦਿਨ ਲਈ ਵੱਧ ਤੋਂ ਵੱਧ ਇਨਾਮ"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"ਐਪ ਸਥਾਪਨ"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"ਪ੍ਰਮੁੱਖ ਸਰਗਰਮੀ"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"ਸੂਚਨਾ ਦੇਖੀ ਗਈ"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"ਸੂਚਨਾ 15 ਮਿੰਟ ਵਿੱਚ ਦੇਖੀ ਗਈ"</string>
@@ -4829,24 +4830,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"ਗਲਤ ਪਾਸਵਰਡ"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"ਸੁਣਨਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਹੇਠਾਂ ਦਿੱਤੇ QR ਕੋਡ ਨੂੰ ਕੇਂਦਰ ਵਿੱਚ ਰੱਖੋ"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR ਕੋਡ ਵੈਧ ਫਾਰਮੈਟ ਨਹੀਂ ਹੈ"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"ਮੋਬਾਈਲ ਬੰਡਲ ਐਪਾਂ"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"ਮੋਬਾਈਲ ਬੰਡਲ ਐਪਾਂ"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"ਮੋਬਾਈਲ ਬੰਡਲ ਐਪਾਂ ਸੰਬੰਧੀ ਪਾਰਦਰਸ਼ਤਾ ਜਾਣਕਾਰੀ"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"ਇਸ ਵਿੱਚ ਵਿਗਿਆਪਨ ਸ਼ਾਮਲ ਹਨ"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"ਵਿਕਾਸਕਾਰਾਂ ਦੀ ਜਾਣਕਾਰੀ"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"ਸੰਪਰਕ ਜਾਣਕਾਰੀ"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"ਵਰਣਨ"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"ਪਰਦੇਦਾਰੀ ਨੀਤੀ"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"ਸ਼੍ਰੇਣੀ"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"ਬੰਡਲ ਕੀਤੀ ਮੋਬਾਈਲ ਐਪ"</string>
 </resources>
