--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"آپ فنگر پرنٹس کی زیادہ سے زیادہ تعداد شامل کر چکے ہیں"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"مزید فنگر پرنٹس شامل نہیں کر سکتے"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' حذف کریں"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"اس سے آپ کے آلے پر اسٹور کردہ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' سے وابستہ فنگر پرنٹ کی تصاویر اور ماڈل حذف ہو جائیں گے"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"اپنا فون غیر مقفل کرنے یا ایپس میں اپنی توثیق کرنے کے لیے اپنے فنگر پرنٹ کا استعمال نہیں کر پائیں گے۔"</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"اس سے آپ کے فون پر اسٹور کردہ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' سے وابستہ فنگر پرنٹ کی تصاویر اور ماڈل حذف ہو جائیں گے"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"اس سے آپ کے ٹیبلیٹ پر اسٹور کردہ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' سے وابستہ فنگر پرنٹ کی تصاویر اور ماڈل حذف ہو جائیں گے"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"اس سے آپ کے آلے پر اسٹور کردہ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' سے وابستہ فنگر پرنٹ کی تصاویر اور ماڈل حذف ہو جائیں گے"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"اپنا فون غیر مقفل کرنے یا ایپس میں اپنی توثیق کرنے کے لیے اپنے فنگر پرنٹ کا استعمال نہیں کر پائیں گے۔"</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"اپنا ٹیبلیٹ غیر مقفل کرنے یا ایپس میں اپنی توثیق کرنے کے لیے اپنے فنگر پرنٹ کا استعمال نہیں کر پائیں گے۔"</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"اپنا آلہ غیر مقفل کرنے یا ایپس میں اپنی توثیق کرنے کے لیے اپنے فنگر پرنٹ کا استعمال نہیں کر پائیں گے۔"</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"آپ اپنی دفتری پروفائل کو غیر مقفل کرنے، خریداریوں کی اجازت دینے یا ورک ایپس میں سائن ان کرنے کے لیے اپنے فنگر پرنٹ کا استعمال نہیں کر پائیں گے۔"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"مرموز کاری"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"ٹیبلیٹ کی مرموز کاری کریں"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+‎"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+‎"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"مکمل ریزولیوشن آپ کی زیادہ بیٹری کا استعمال کرتا ہے۔ آپ کی ریزولیوشن پر سوئچ کرنے سے کچھ ایپس ری سٹارٹ ہو سکتی ہیں۔"</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"منتخب کردہ"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"رنگ"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"قدرتی"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"بڑھایا گیا"</string>
@@ -1304,14 +1309,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"‏منتقلی کے دوران <xliff:g id="NAME">^1</xliff:g> کو نہ ہٹائیں۔ ‎\n\n‎اس آلہ پر <xliff:g id="APP">^2</xliff:g> ایپ منتقلی مکمل ہونے تک دستیاب نہیں ہوگی۔"</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"آپ اس <xliff:g id="NAME">^1</xliff:g> کا استعمال کیسے کریں گے؟"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"‏داخلی اسٹوریج کے لئے SD کارڈ کو فارمیٹ کریں"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"‏صرف اس ٹیبلیٹ پر استعمال کرنے کے لئے ایپس اور میڈیا کو اسٹور کریں۔ &lt;a href=https://support.google.com/android/answer/12153449&gt;‏SD کارڈ سیٹ اپ کرنے کے بارے میں مزید جانیں&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"فارمیٹ کریں"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"‏داخلی اسٹوریج کے لئے SD کارڈ کو فارمیٹ کریں"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"‏صرف اس فون پر استعمال کرنے کے لئے ایپس اور میڈیا کو اسٹور کریں۔ &lt;a href=https://support.google.com/android/answer/12153449&gt;‏SD کارڈ سیٹ اپ کرنے کے بارے میں مزید جانیں&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"فارمیٹ کریں"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"یا"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"‏پورٹیبل اسٹوریج کے لئے SD کارڈ کو فارمیٹ کریں"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"‏تصاویر، ویڈیوز، موسیقی وغیرہ کو اسٹور کریں اور دیگر آلات سے ان تک رسائی حاصل کریں۔ &lt;a href=https://support.google.com/android/answer/12153449&gt;‏SD کارڈ سیٹ اپ کرنے کے بارے میں مزید جانیں&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"فارمیٹ کریں"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"بعد میں سیٹ اپ کریں"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"اس <xliff:g id="NAME">^1</xliff:g> کو فارمیٹ کریں؟"</string>
@@ -1845,12 +1853,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"آپ کے ویجیٹ تخلیق کرنے کے بعد یہ ایپلیکیشن: ڈسپلے کردہ سبھی چیزوں تک رسائی حاصل کر سکے گی۔\n\nایپلیکیشن: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nویجیٹ: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"<xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> کو ہمیشہ ویجٹس بنانے اور ان کے ڈیٹا تک رسائی حاصل کرنے کی اجازت دیں"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"استعمال کے اعداد و شمار"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"استعمال کے وقت کے لحاظ سے ترتیب دیں"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"آخری بار استعمال کردہ کے لحاظ سے ترتیب دیں"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"ایپ کے نام کے لحاظ سے ترتیب دیں"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"آخری بار استعمال کردہ"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"استعمال کا وقت"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"ایکسیسبیلٹی"</string>
@@ -4766,8 +4771,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"فی واحد ایونٹ انعامات"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"ایونٹ کے دورانیے کے فی سیکنڈ انعامات"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"فی دن زیادہ سے زیادہ انعامات"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"ایپ انسٹال"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"سرفہرست سرگرمی"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"اطلاع کو دیکھا گیا"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"اطلاع کو 15 منٹ کے اندر دیکھا گیا"</string>
@@ -4829,24 +4833,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"غلط پاس ورڈ"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"‏سننا شروع کرنے کے لیے، نیچے کے QR کوڈ کو سینٹر میں رکھیں"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"‏QR کوڈ درست فارمیٹ نہیں ہے"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"موبائل بنڈل کردہ ایپس"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"موبائل بنڈل کردہ ایپس"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"موبائل بنڈل کردہ ایپس کی شفافیت کی معلومات"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"اشتہارات پر مشتمل ہے"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"ڈویلپر (ڈویلپرز) کی معلومات"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"رابطہ کی معلومات"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"تفصیل"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"رازداری کی پالیسی"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"زمرہ"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"موبائل بنڈل کردہ ایپ"</string>
 </resources>
