--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -567,8 +567,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Barmoq izlari maksimal miqdorda qo‘shildi"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Boshqa barmoq izini qo‘shib bo‘lmaydi"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"“<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>” qaydini oʻchirish"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Bunda qurilmadagi <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> barmoq izi tasvirlari va modellari tozalanadi"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Keyin barmoq izidan foydalanib telefon qulfini ocholmaysiz yoki ilovalarda shaxsingizni tasdiqlay olmaysiz."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Bunda telefondagi <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> barmoq izi tasvirlari va modellari tozalanadi"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Bunda planshetdagi <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> barmoq izi tasvirlari va modellari tozalanadi"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Bunda qurilmadagi <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> barmoq izi tasvirlari va modellari tozalanadi"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Keyin barmoq izidan foydalanib telefon qulfini ocholmaysiz yoki ilovalarda shaxsingizni tasdiqlay olmaysiz."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Planshetni qulfdan chiqarish yoki ilovalarda hisob tekshiruvi uchun barmoq izidan foydalana olmay qolasiz."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Qurilmani qulfdan chiqarish yoki ilovalarda hisob tekshiruvi uchun barmoq izidan foydalana olmay qolasiz."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Ishchi profilingizni qulfdan chiqarish, xaridlarni amalga oshirish yoki ish uchun ilovalarga kirish uchun barmoq izingizdan foydalana olmay qolasiz"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Shifrlash"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Planshetni shifrlash"</string>
@@ -1098,6 +1102,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Asl hajmda koʻproq batareya quvvati sarflanadi. Tiniqlik almashtirilsa, ayrim ilovalar qayta ishga tushadi."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Tanlangan"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Ranglar"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Tabiiy"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Yorqin"</string>
@@ -1310,14 +1315,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Ko‘chirish davomida “<xliff:g id="NAME">^1</xliff:g>” kartasini chiqara ko‘rmang. \n\n Ushbu qurilmadagi <xliff:g id="APP">^2</xliff:g> ilovasi ko‘chirish tugamaguncha ishlamaydi."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"<xliff:g id="NAME">^1</xliff:g> qanday ishlatilsin?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"SD kartani ichki xotira shaklida formatlash"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Ilova va media fayllar faqat shu planshetda saqlansin. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kartani sozlash haqida batafsil&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Ilova va media fayllar faqat shu planshetda saqlansin. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kartani sozlash haqida batafsil&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatlash"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"SD kartani ichki xotira shaklida formatlash"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Ilova va media fayllar faqat shu telefonda saqlansin. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kartani sozlash haqida batafsil&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Ilova va media fayllar faqat shu telefonda saqlansin. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kartani sozlash haqida batafsil&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatlash"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Yoki"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"SD kartani ixcham xotira shaklida formatlash"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Rasm, video, musiqa va boshqa fayllarni saqlash va ularni boshqa qurilmalarda ochish. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kartani sozlash haqida batafsil&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Rasm, video, musiqa va boshqa fayllarni saqlash va ularni boshqa qurilmalarda ochish &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kartani sozlash haqida batafsil&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatlash"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Keyinroq sozlash"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Bu <xliff:g id="NAME">^1</xliff:g> formatlansinmi?"</string>
@@ -4831,24 +4836,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Parol xato"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Tinglashni boshlash uchun quyidagi QR kodni markazga joylang"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR xato formatda"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Mobil terma ilovalar"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Mobil terma ilovalar"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Mobil terma ilovalar shaffofligi axboroti"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Ichida reklama bor"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Dasturchi axboroti"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Kontakt axboroti"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Tavsif"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Maxfiylik siyosati"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Turkum"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Mobil terma ilova"</string>
 </resources>
