--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -577,8 +577,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"لقد أضفت الحد الأقصى لعدد بصمات الإصبع"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"يتعذر إضافة مزيد من بصمات الإصبع"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"حذف \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\""</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"يؤدي هذا الإجراء إلى حذف النموذج والصور المرتبطة ببصمة الإصبع \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\"، والتي تم تخزينها على جهازك."</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"لن تتمكّن من استخدام بصمة إصبعك لفتح قفل هاتفك أو إثبات هويتك في التطبيقات."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"يؤدي هذا الإجراء إلى حذف النموذج والصور المرتبطة ببصمة الإصبع \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\"، والتي تم تخزينها على هاتفك."</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"يؤدي هذا الإجراء إلى حذف النموذج والصور المرتبطة ببصمة الإصبع \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\"، والتي تم تخزينها على جهازك اللوحي."</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"يؤدي هذا الإجراء إلى حذف النموذج والصور المرتبطة ببصمة الإصبع \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\"، والتي تم تخزينها على جهازك."</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"لن تتمكّن من استخدام بصمة إصبعك لفتح قفل هاتفك أو إثبات هويتك في التطبيقات."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"لن تتمكّن من استخدام بصمة إصبعك لفتح قفل جهازك اللوحي أو إثبات هويتك في التطبيقات."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"لن تتمكّن من استخدام بصمة إصبعك لفتح قفل جهازك أو إثبات هويتك في التطبيقات."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"لن تتمكّن من استخدام بصمة إصبعك لفتح قفل الملف الشخصي للعمل أو السماح بعمليات الشراء أو تسجيل الدخول إلى تطبيقات العمل."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"التشفير"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"تشفير الجهاز اللوحي"</string>
@@ -1172,6 +1176,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+‎"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+‎"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"تستخدِم الدقة الكاملة قدرًا أكبر من طاقة بطاريتك. وقد يؤدي تبديل الدقة إلى إعادة تشغيل بعض التطبيقات."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"الألوان"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"طبيعية"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"مُحسنة"</string>
@@ -1388,14 +1394,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"لا تزِل <xliff:g id="NAME">^1</xliff:g> أثناء عملية النقل. \n\nولن يكون التطبيق <xliff:g id="APP">^2</xliff:g> على هذا الجهاز متاحًا حتى الانتهاء من عملية النقل."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"كيف ستستخدم <xliff:g id="NAME">^1</xliff:g>؟"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"‏تهيئة بطاقة SD كوحدة تخزين داخلية"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"‏يمكنك تخزين التطبيقات والوسائط لاستخدامها على هذا الجهاز اللوحي فقط. &lt;a href=https://support.google.com/android/answer/12153449&gt;تعرُّف على المزيد حول ضبط إعدادات بطاقة SD‏&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"تهيئة"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"‏تهيئة بطاقة SD كوحدة تخزين داخلية"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"‏يمكنك تخزين التطبيقات والوسائط لاستخدامها على هذا الهاتف فقط. &lt;a href=https://support.google.com/android/answer/12153449&gt;تعرُّف على المزيد حول ضبط إعدادات بطاقة SD‏&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"تهيئة"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"أو"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"‏تهيئة بطاقة SD كوحدة تخزين محمولة"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"‏يمكنك تخزين الصور والفيديوهات والموسيقى وغير ذلك مع إمكانية الوصول إليها من أجهزة أخرى. &lt;a href=https://support.google.com/android/answer/12153449&gt;تعرُّف على المزيد حول ضبط إعدادات بطاقة SD‏&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"تهيئة"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"الإعداد لاحقًا"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"هل تريد تهيئة <xliff:g id="NAME">^1</xliff:g>؟"</string>
@@ -1941,12 +1950,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"بعد إنشاء الأداة، يمكن للتطبيق الوصول إلى كل العناصر المعروضة.\n\nالتطبيق: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nالأداة: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"السماح دومًا لـ <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> بإنشاء الأدوات والوصول إلى بياناتها"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"إحصاءات الاستخدام"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"الترتيب حسب وقت الاستخدام"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"الترتيب حسب وقت آخر استخدام"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"الترتيب حسب اسم التطبيق"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"آخر مرة تم استخدامه"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"وقت الاستخدام"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"تسهيل الاستخدام"</string>
@@ -5038,8 +5044,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"المكافآت لكل حدث"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"المكافآت لكل ثانية من مدة الحدث"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"الحد الأقصى للمكافآت يوميًا"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"تثبيت تطبيق"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"أعلى نشاط"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"تم الاطّلاع على الإشعار"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"تم الاطّلاع على الإشعار خلال 15 دقيقة"</string>
