--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Maksimum sayda barmaq izi əlavə etmisiniz"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Daha artıq barmaq izi əlavə edilə bilməz"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Silin: \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\'"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Bu, cihazınızda saxlanılan \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ilə əlaqəli barmaq izi şəkillərini və modelini silir"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Telefonunuzu kiliddən çıxarmaq və ya tətbiqlərdə kimliyi doğrulamaq üçün barmaq izinizi istifadə edə bilməyəcəksiniz."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Bu, telefonunuzda saxlanılan \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ilə əlaqəli barmaq izi şəkillərini və modelini silir"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Bu, planşetinizdə saxlanılan \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ilə əlaqəli barmaq izi şəkillərini və modelini silir"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Bu, cihazınızda saxlanılan \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ilə əlaqəli barmaq izi şəkillərini və modelini silir"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Telefonunuzu kiliddən çıxarmaq və ya tətbiqlərdə kimliyi doğrulamaq üçün barmaq izinizi istifadə edə bilməyəcəksiniz."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Planşetinizi kiliddən çıxarmaq və ya tətbiqlərdə kimliyi doğrulamaq üçün barmaq izinizi istifadə edə bilməyəcəksiniz."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Cihazınızı kiliddən çıxarmaq və ya tətbiqlərdə kimliyi doğrulamaq üçün barmaq izinizi istifadə edə bilməyəcəksiniz."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"İş profilinizi kiliddən çıxarmaq, alışları təsdiqləmək və ya iş tətbiqlərinə giriş üçün barmaq izinizi istifadə edə bilməyəcəksiniz"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Şifrələmə"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Planşeti şifrələyin"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Tam ayırdetmə dəqiqliyi batareyanızdan daha çox istifadə edir. Ayırdetmə dəqiqliyinin keçirilməsi bəzi tətbiqlərin yenidən başladılmasına səbəb ola bilər."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Seçilib"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Rənglər"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Təbii"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Dolğun"</string>
@@ -1304,14 +1309,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Daşınma zamanı <xliff:g id="NAME">^1</xliff:g> silinməməlidir. \n\nDaşınma tamamlanmamış bu cihazdakı <xliff:g id="APP">^2</xliff:g> tətbiqi əlçatan olmayacaq."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"<xliff:g id="NAME">^1</xliff:g> necə istifadə olunmalıdır?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Daxili yaddaş üçün SD kartı formatlayın"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Yalnız bu planşetdə istifadə ediləcək tətbiqləri &amp; medianı yadda saxlayın. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kartın ayarlanması haqqında ətraflı məlumat əldə edin&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Yalnız bu planşetdə istifadə ediləcək tətbiqləri &amp; medianı yadda saxlayın. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kartın ayarlanması haqqında ətraflı məlumat əldə edin&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatlayın"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Daxili yaddaş üçün SD kartı formatlayın"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Yalnız bu telefonda istifadə ediləcək tətbiqləri &amp; medianı yadda saxlayın. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kartın ayarlanması haqqında ətraflı məlumat əldə edin&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Yalnız bu telefonda istifadə ediləcək tətbiqləri &amp; medianı yadda saxlayın. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kartın ayarlanması haqqında ətraflı məlumat əldə edin&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatlayın"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Və ya"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Portativ yaddaş üçün SD kartı formatlayın"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Fotoları, videoları, musiqiləri və daha çoxunu saxlayın və onlara digər cihazlardan daxil olun. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kartın ayarlanması haqqında ətraflı məlumat əldə edin&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Fotoları, videoları, musiqiləri və daha çoxunu saxlayın və onlara digər cihazlardan daxil olun. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kartın ayarlanması haqqında ətraflı məlumat əldə edin&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatlayın"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Sonra quraşdırın"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"<xliff:g id="NAME">^1</xliff:g> format edilsin?"</string>
@@ -1845,12 +1850,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"Vidcet yaratdıqdan sonra, tətbiq göstərilən hər şeyə giriş edə bilər.\n\nTətbiq: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nVidcet: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"<xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> üçün widget yaratmaq və onların məlumatlarını əldə etməyə həmişə icazə verir"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"İstifadəçi statistikası"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"İstifadə vaxtı üzrə çeşidləyin"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"Son istifadə üzrə çeşidləyin"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"Tətbiq adı üzrə çeşidləyin"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"Son istifadə vaxtı"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"İstifadə müddəti"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"Əlçatımlılıq"</string>
@@ -4766,8 +4768,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Hər tədbir üçün mükafatlar"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Tədbirin hər saniyəsi üçün mükafatlar"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"Günlük Maksimum Mükafat"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"Tətbiq Quraşdırması"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Vacib Fəaliyyət"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Bildirişə Baxılıb"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Bildirişə 15 Dəqiqə Ərzində Baxılıb"</string>
@@ -4829,24 +4830,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Yanlış parol"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Dinləməyə başlamaq üçün aşağıda QR kodu mərkəzə yerləşdirin"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR kodu doğru formatda deyil"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Mobil paketlənmiş tətbiqlər"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Mobil paketlənmiş tətbiqlər"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Mobil paketlənmiş tətbiqlərin şəffaflıq məlumatı"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Reklamdan ibarətdir"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Tərtibatçı Məlumatı"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Kontakt məlumatı"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Təsvir"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Məxfilik Siyasəti"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kateqoriya"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Mobil Paketlənmiş Tətbiq"</string>
 </resources>
