--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -571,8 +571,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Вы дадалі максімальную колькасць адбіткаў пальцаў"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Немагчыма дадаць больш адбіткаў пальцаў"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Выдаліць \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\""</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Відарысы і мадэль адбіткаў пальцаў, звязаныя з адбіткам \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\", будуць выдалены"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Вы не зможаце выкарыстоўваць адбітак пальца для разблакіроўкі тэлефона ці спраўджання сваёй асобы ў праграмах."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Відарысы і мадэль адбіткаў пальцаў, звязаныя з адбіткам \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\", будуць выдалены з тэлефона"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Відарысы і мадэль адбіткаў пальцаў, звязаныя з адбіткам \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\", будуць выдалены з планшэта"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Відарысы і мадэль адбіткаў пальцаў, звязаныя з адбіткам \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\", будуць выдалены"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Вы не зможаце выкарыстоўваць адбітак пальца для разблакіроўкі тэлефона ці спраўджання сваёй асобы ў праграмах."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Вы не зможаце выкарыстоўваць адбітак пальца для разблакіроўкі планшэта ці спраўджання сваёй асобы ў праграмах."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Вы не зможаце выкарыстоўваць адбітак пальца для разблакіроўкі прылады ці спраўджання сваёй асобы ў праграмах."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Вы не зможаце выкарыстоўваць адбітак пальца для разблакіроўкі свайго працоўнага профілю, аўтарызацыі купляў і ўваходу ў працоўныя праграмы."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Шыфраванне"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Зашыфраваць даныя"</string>
@@ -1134,6 +1138,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Пры поўнай раздзяляльнасці хутчэй разраджаецца акумулятар. Пераключэнне на вашу раздзяляльнасць можа прывесці да перазапуску некаторых праграм."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Выбрана"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Колеры"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Натуральныя"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Яркія"</string>
@@ -1348,14 +1353,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Не вымайце <xliff:g id="NAME">^1</xliff:g> падчас перамяшчэння. \n\nДадатак <xliff:g id="APP">^2</xliff:g> не будзе даступны на гэтай прыладзе, пакуль перамяшчэнне не завершана."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Як выкарыстоўваць <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Фармаціраваць SD-карту для ўнутранага сховішча"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Захоўваць праграмы і мультымедыя для іх выкарыстання толькі на гэтым планшэце. &lt;a href=https://support.google.com/android/answer/12153449&gt;Даведацца больш пра наладжванне SD-карты&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Фармаціраваць"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Фармаціраваць SD-карту для ўнутранага сховішча"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Захоўваць праграмы і мультымедыя для іх выкарыстання толькі на гэтым тэлефоне. &lt;a href=https://support.google.com/android/answer/12153449&gt;Даведацца больш пра наладжванне SD-карты&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Фармаціраваць"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"або"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Фармаціраваць SD-карту для партатыўнага сховішча"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Захоўваць фота, відэа, музыку і іншае змесціва і атрымліваць да яго доступ з іншых прылад. &lt;a href=https://support.google.com/android/answer/12153449&gt;Даведацца больш пра наладжванне SD-карты&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Фармаціраваць"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Наладзіць пазней"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Адфармаціраваць прыладу \"<xliff:g id="NAME">^1</xliff:g>\"?"</string>
@@ -1895,12 +1903,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"Пасля стварэння віджэта праграма зможа атрымаць доступ да ўсяго змесціва, якое паказваецца на экране.\n\nПраграма: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nВіджэт: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"Заўсёды дазваляць <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> ствараць віджэты і атрымліваць доступ да іх дадзеных"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"Статыстыка выкарыстання"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"Сартаваць па працягласці"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"Сартаваць па часе карыстання"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"Сартаваць па назве праграмы"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"Апошняе выкарыстанне"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"Час выкарыстання"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"Спецыяльныя магчымасці"</string>
@@ -4904,8 +4909,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Бонусы за адзінкавую падзею"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Бонусы за секунду пацягласці падзеі"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"Максімальная колькасць бонусаў у дзень"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"Усталяванне праграм"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Найвышэйшая актыўнасць"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Апавяшчэнне прагледжана"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Апавяшчэнне прагледжана на працягу 15 хв"</string>
@@ -4967,24 +4971,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Няправільны пароль"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Каб пачаць праслухванне, памясціце ў цэнтр QR-код, які знаходзіцца ўнізе"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR-код мае несапраўдны фармат"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Мабільныя звязаныя праграмы"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Мабільныя звязаныя праграмы"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Інфармацыя пра празрыстасць мабільных звязаных праграм"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Змяшчае рэкламу"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Інфармацыя ад распрацоўшчыка(ў)"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Кантактная інфармацыя"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Апісанне"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Палітыка прыватнасці"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Катэгорыя"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Мабільная звязаная праграма"</string>
 </resources>
