--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"আপনি অনুমোদিত সর্বোচ্চ সংখ্যক আঙ্গুলের ছাপ যোগ করেছেন"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"এর বেশি আঙ্গুলের ছাপ যোগ করা যাবে না"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' মুছে দিন"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"এটি আপনার ডিভাইসে স্টোর হয়ে থাকা আঙ্গুলের ছাপের ইমেজ এবং \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\'-এর সঙ্গে সম্পর্কিত অন্যান্য মডেল মুছে দেয়"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"ফোন আনলক বা অ্যাপে নিজের পরিচয় যাচাই করার জন্য, আপনি আর ফিঙ্গারপ্রিন্ট ব্যবহার করতে পারবেন না।"</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"এটি আপনার ফোনে সেভ হয়ে থাকা ফিঙ্গারপ্রিন্টের ছবি এবং \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\'-এর সাথে সম্পর্কিত অন্যান্য মডেল মুছে দেয়"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"এটি আপনার ট্যাবলেটে সেভ হয়ে থাকা ফিঙ্গারপ্রিন্টের ছবি এবং \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\'-এর সাথে সম্পর্কিত অন্যান্য মডেল মুছে দেয়"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"এটি আপনার ডিভাইসে স্টোর হয়ে থাকা আঙ্গুলের ছাপের ইমেজ এবং \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\'-এর সঙ্গে সম্পর্কিত অন্যান্য মডেল মুছে দেয়"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"ফোন আনলক বা অ্যাপে নিজের পরিচয় যাচাই করার জন্য, আপনি আর ফিঙ্গারপ্রিন্ট ব্যবহার করতে পারবেন না।"</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"ট্যাবলেট আনলক বা অ্যাপে নিজের পরিচয় যাচাই করার জন্য আপনি আর ফিঙ্গারপ্রিন্ট ব্যবহার করতে পারবেন না।"</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"ডিভাইস আনলক বা অ্যাপে নিজের পরিচয় যাচাই করার জন্য আপনি আর ফিঙ্গারপ্রিন্ট ব্যবহার করতে পারবেন না।"</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"ফিঙ্গারপ্রিন্ট ব্যবহার করে আপনি অফিস প্রোফাইল আনলক করতে, অফিসের অ্যাপে সাইন-ইন করতে বা কেনাকাটায় অনুমতি দিতে পারবেন না।"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"এনক্রিপশন"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"ট্যাবলেট এনক্রিপ্ট করুন"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"সম্পূর্ণ রেজোলিউশন ব্যবহার করলে আপনার ব্যাটারির চার্জ বেশি খরচ হয়। রেজোলিউশন পরিবর্তন করা হলে কিছু অ্যাপ রিস্টার্ট হতে পারে।"</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"বেছে নেওয়া হয়েছে"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"রঙ"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"স্বাভাবিক"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"বুস্ট করা"</string>
@@ -1304,14 +1309,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"সরানোর সময় <xliff:g id="NAME">^1</xliff:g>টি অপসারণ করবেন না৷ \n\nএই ডিভাইসের <xliff:g id="APP">^2</xliff:g> অ্যাপ্লিকেশানটি সরানো সম্পূর্ণ না হওয়া পর্যন্ত উপলব্ধ নাও হতে পারে৷"</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"আপনি এই <xliff:g id="NAME">^1</xliff:g> কীভাবে ব্যবহার করবেন?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"ইন্টার্নাল স্টোরেজের জন্য এসডি কার্ড ফর্ম্যাট করা"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"শুধুমাত্র এই ট্যাবলেটে ব্যবহার করতে অ্যাপ, মিডিয়া সেভ করুন। &lt;a href=https://support.google.com/android/answer/12153449&gt;এসডি কার্ড সেট-আপ করা সম্পর্কে আরও জানুন&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"ফর্ম্যাট করুন"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"ইন্টার্নাল স্টোরেজের জন্য এসডি কার্ড ফর্ম্যাট করা"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"শুধুমাত্র এই ফোনে ব্যবহার করতে অ্যাপ, মিডিয়া সেভ করুন। &lt;a href=https://support.google.com/android/answer/12153449&gt;এসডি কার্ড সেট-আপ করা সম্পর্কে আরও জানুন&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"ফর্ম্যাট করুন"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"অথবা"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"পোর্টেবল স্টোরেজের জন্য এসডি কার্ড ফরম্যাট করা"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"ফটো, ভিডিও, মিউজিক ও আরও অনেক কিছু সেভ করুন এবং অন্য ডিভাইস থেকে সেগুলি অ্যাক্সেস করুন। &lt;a href=https://support.google.com/android/answer/12153449&gt;এসডি কার্ড সেট-আপ করা সম্পর্কে আরও জানুন&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"ফর্ম্যাট করুন"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"পরে সেট-আপ করুন"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"<xliff:g id="NAME">^1</xliff:g> ফরম্যাট করবেন?"</string>
@@ -1845,12 +1853,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"আপনি উইজেট তৈরি করার পরে, ডিসপ্লে করা প্রতিটি জিনিস অ্যাপ্লিকেশন অ্যাক্সেস করতে পারবে।\n\nঅ্যাপ্লিকেশন: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nউইজেট: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"উইজেট তৈরি করতে এবং তাদের ডেটা অ্যাক্সেস করতে <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> কে সর্বদা অনুমতি দিন"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"ব্যবহারের পরিসংখ্যান"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"ব্যবহারের সময় অনুযায়ী সাজান"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"শেষবারের ব্যবহার অনুযায়ী সাজান"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"অ্যাপের নাম অনুযায়ী সাজান"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"সর্বশেষ ব্যবহার হয়েছে"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"ব্যবহারের সময়"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"অ্যাক্সেসিবিলিটি"</string>
@@ -4766,8 +4771,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"প্রত্যেক ইভেন্টের জন্য পুরস্কার"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"ইভেন্ট চলাকালীন প্রতি সেকেন্ডে পুরস্কার"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"প্রতিদিন পুরস্কার পাওয়ার সর্বোচ্চ সীমা"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"অ্যাপ ইনস্টল করুন"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"সবচেয়ে বেশি অ্যাক্টিভিটি"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"বিজ্ঞপ্তি দেখেছন"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"১৫ মিনিটের মধ্যে বিজ্ঞপ্তি দেখেছেন"</string>
@@ -4829,24 +4833,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"ভুল পাসওয়ার্ড লেখা হয়েছে"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"শোনা শুরু করতে, নিচের QR কোডটি মাঝখানে রাখুন"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"ভুল QR কোড ফর্ম্যাট"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"মোবাইল অ্যাপ বান্ডেল"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"মোবাইল অ্যাপ বান্ডেল"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"মোবাইল অ্যাপ বান্ডেল স্বচ্ছতা সংক্রান্ত তথ্য"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"বিজ্ঞাপন দেখানো হয়"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"ডেভেলপার সংক্রান্ত তথ্য"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"যোগাযোগের তথ্য"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"বিবরণ"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"গোপনীয়তা নীতি"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"বিভাগ"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"মোবাইল অ্যাপ বান্ডেল"</string>
 </resources>
