--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Et voi lisätä useampia sormenjälkiä."</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Enempää sormenjälkiä ei voi lisätä."</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Poista <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Tämä poistaa laitteelle tallennetut sormenjäljen kuvat ja mallit, joihin <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> liittyy"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Et voi käyttää sormenjälkeäsi puhelimen lukituksen avaamiseen tai henkilöllisyyden todentamiseen sovelluksissa."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Tämä poistaa puhelimelle tallennetut sormenjäljen kuvat ja mallit, joihin <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> liittyy"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Tämä poistaa tabletille tallennetut sormenjäljen kuvat ja mallit, joihin <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> liittyy"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Tämä poistaa laitteelle tallennetut sormenjäljen kuvat ja mallit, joihin <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> liittyy"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Et voi käyttää sormenjälkeäsi puhelimen lukituksen avaamiseen tai henkilöllisyyden todentamiseen sovelluksissa."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Et voi käyttää sormenjälkeäsi puhelimen tabletin avaamiseen tai henkilöllisyyden todentamiseen sovelluksissa."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Et voi käyttää sormenjälkeäsi laitteen lukituksen avaamiseen tai henkilöllisyyden todentamiseen sovelluksissa."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Et voi käyttää sormenjälkeäsi työprofiilin lukituksen avaamiseen, ostosten hyväksymiseen tai työsovelluksiin kirjautumiseen."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Salaus"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Salaa tabletti"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p – FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p – QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Täysi resoluutio kuluttaa enemmän akkua. Jotkin sovellukset käynnistyvät uudelleen, kun vaihdat resoluutiota."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Valittu"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Värit"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Luonnollinen"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Tehostettu"</string>
@@ -1304,14 +1309,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Jätä <xliff:g id="NAME">^1</xliff:g> paikalleen siirron ajaksi. \n\nTämän laitteen <xliff:g id="APP">^2</xliff:g>-sovellus ei ole käytettävissä, ennen kuin siirto on valmis."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Miten <xliff:g id="NAME">^1</xliff:g> otetaan käyttöön?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Alusta SD-kortti sisäiseksi tallennustilaksi"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Tallenna sovelluksia ja mediaa vain tämän tabletin käyttöön. &lt;a href=https://support.google.com/android/answer/12153449&gt;Lue lisää SD-kortin käyttöönotosta&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Alusta"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Alusta SD-kortti sisäiseksi tallennustilaksi"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Tallenna sovelluksia ja mediaa vain tämän puhelimen käyttöön. &lt;a href=https://support.google.com/android/answer/12153449&gt;Lue lisää SD-kortin käyttöönotosta&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Alusta"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"tai"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Alusta SD-kortti siirrettäväksi tallennustilaksi"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Tallenna esimerkiksi musiikkia ja videoita ja käytä niitä muilla laitteilla. &lt;a href=https://support.google.com/android/answer/12153449&gt;Lue lisää SD-kortin käyttöönotosta&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Alusta"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Määritä myöhemmin"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Alustetaanko tämä <xliff:g id="NAME">^1</xliff:g>?"</string>
@@ -1845,12 +1853,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"Kun olet luonut widgetin, sovellus voi käyttää kaikkia näytettäviä tietoja.\n\nSovellus: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nWidget: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"<xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> saa luoda widgetejä ja käyttää niiden tietoja"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"Käyttötiedot"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"Lajittele käytön perusteella"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"Lajittele viimeisimmät ensin"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"Lajittele nimen perusteella"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"Viimeinen käyttöaika"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"Käyttöaika"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"Saavutettavuus"</string>
@@ -4766,8 +4771,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Palkinnot yhtä tapahtumaa kohden"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Palkintoja sekunnissa tapahtuman aikana"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"Enimmäispalkinnot päivää kohden"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"Sovellusasennus"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Tärkein toiminta"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Ilmoitus nähty"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Ilmoitus nähty 15 min sisällä"</string>
@@ -4829,24 +4833,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Väärä salasana"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Aloita kuuntelu keskittämällä alla olevaan QR-koodiin"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR-koodin muoto ei kelpaa"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Mukana tulevat mobiilisovellukset"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Mukana tulevat mobiilisovellukset"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Mukana tulevien mobiilisovellusten avoimuustiedot"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Sisältää mainoksia"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Kehittäjien tiedot"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Yhteystiedot"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Kuvaus"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Tietosuojakäytäntö"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Luokka"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Mukana tuleva mobiilisovellus"</string>
 </resources>
