--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Engadiches o número máximo de impresións dixitais"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Non se poden engadir máis impresións dixitais"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Eliminar \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\""</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Ao realizar esta acción, eliminaranse as imaxes e o modelo da impresión dixital <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> que estean almacenados no teu dispositivo"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Non poderás utilizar a impresión dixital para desbloquear o teléfono nin para verificar a túa identidade nas aplicacións."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Ao realizar esta acción, eliminaranse as imaxes e o modelo da impresión dixital <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> que estean almacenados no teléfono"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Ao realizar esta acción, eliminaranse as imaxes e o modelo da impresión dixital <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> que estean almacenados na tableta"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Ao realizar esta acción, eliminaranse as imaxes e o modelo da impresión dixital <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> que estean almacenados no teu dispositivo"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Non poderás utilizar a impresión dixital para desbloquear o teléfono nin para verificar a túa identidade nas aplicacións."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Non poderás utilizar a impresión dixital para desbloquear a tableta nin para verificar a túa identidade nas aplicacións."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Non poderás utilizar a impresión dixital para desbloquear o dispositivo nin para verificar a túa identidade nas aplicacións."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Non poderás utilizar a impresión dixital para desbloquear o perfil de traballo, autorizar compras nin iniciar sesión nas aplicacións de traballo."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Encriptación"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Encriptar tableta"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"A máxima resolución consome máis batería. Se cambias a resolución, pode que se reinicien algunhas aplicacións."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Seleccionouse"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Cores"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Naturais"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Realzadas"</string>
@@ -1304,14 +1309,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Non retires a <xliff:g id="NAME">^1</xliff:g> durante a migración. \n\nA aplicación <xliff:g id="APP">^2</xliff:g> deste dispositivo non estará dispoñible ata que finalice a migración."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Como queres usar esta <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formatar SD para usala como almacenamento interno"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Almacena aplicacións e contido multimedia para usalos só nesta tableta. &lt;a href=https://support.google.com/android/answer/12153449&gt;Máis información sobre como configurar unha tarxeta SD&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatar"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formatar SD para usala como almacenamento interno"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Almacena aplicacións e contido multimedia para usalos só neste teléfono. &lt;a href=https://support.google.com/android/answer/12153449&gt;Máis información sobre como configurar unha tarxeta SD&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatar"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"ou"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formatar SD para usala como almacenamento portátil"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Almacena fotos, vídeos, música e máis contido, e accede a el desde outros dispositivos. &lt;a href=https://support.google.com/android/answer/12153449&gt;Máis información sobre como configurar unha tarxeta SD&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatar"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Configurar máis tarde"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Queres formatar esta <xliff:g id="NAME">^1</xliff:g>?"</string>
@@ -1845,12 +1853,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"Despois de crear o widget, a aplicación poderá acceder a todo o que se mostre.\n\nAplicación: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nWidget: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"Permitir sempre a <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> crear widgets e acceder aos seus datos"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"Estatísticas de uso"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"Ordenar por tempo de uso"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"Ordenar por data de último uso"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"Ordenar por nome de aplicación"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"Última vez que se utilizou"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"Tempo de uso"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"Accesibilidade"</string>
@@ -4766,8 +4771,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Recompensas por cada evento"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Recompensas por s da duración do evento"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"Número máximo de recompensas ao día"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"Instalación da aplicación"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Actividade principal"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Notificación vista"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Notificación vista nun prazo de 15 min"</string>
@@ -4829,24 +4833,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"O contrasinal é incorrecto"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Para comezar a escoitar audio, encadra o seguinte código QR"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"O formato do código QR non é válido"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Aplicacións agrupadas para móbiles"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Aplicacións agrupadas para móbiles"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Información de transparencia das aplicacións agrupadas para móbiles"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Contén anuncios"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Información do programador"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Información de contacto"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Descrición"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Política de privacidade"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Categoría"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Aplicación agrupada para móbiles"</string>
 </resources>
