--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -567,8 +567,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Dodali ste maksimalan broj otisaka prstiju"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Nije moguće dodati više otisaka prstiju"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Izbrišite <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Na taj način brišu se slike otiska prsta i model koji su povezani s otiskom prsta <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> i koji su pohranjeni na vašem uređaju"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Otiskom prsta nećete moći otključati telefon niti potvrditi svoj identitet u aplikacijama."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Na taj način brišu se slike otiska prsta i model koji su povezani s otiskom prsta <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> i pohranjeni na vašem telefonu"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Na taj način brišu se slike otiska prsta i model koji su povezani s otiskom prsta <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> i pohranjeni na vašem tabletu"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Na taj način brišu se slike otiska prsta i model koji su povezani s otiskom prsta <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> i koji su pohranjeni na vašem uređaju"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Otiskom prsta nećete moći otključati telefon niti potvrditi svoj identitet u aplikacijama."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Otiskom prsta nećete moći otključati tablet niti potvrditi da ste to vi u aplikacijama."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Otiskom prsta nećete moći otključati uređaj niti potvrditi da ste to vi u aplikacijama."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Otiskom prsta nećete moći otključati poslovni profil, autorizirati kupnje niti se prijaviti u poslovne aplikacije."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Šifriranje"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Šifriraj tablet"</string>
@@ -1114,6 +1118,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080 p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440 p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Puna razlučivost više troši bateriju. Promjena razlučivosti može uzrokovati ponovno pokretanje nekih aplikacija."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Odabrano"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Boje"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Prirodno"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Pojačano"</string>
@@ -1327,14 +1332,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Ne uklanjajte uređaj <xliff:g id="NAME">^1</xliff:g> tijekom premještanja. \n\nAplikacija <xliff:g id="APP">^2</xliff:g> na ovom uređaju neće biti dostupna dok premještanje ne završi."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Za što će se upotrebljavati <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formatiranje SD kartice za internu pohranu"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Pohranite aplikacije i medije za uporabu samo na ovom tabletu. &lt;a href=https://support.google.com/android/answer/12153449&gt;Saznajte više o postavljanju SD kartice&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Pohranite aplikacije i medije za uporabu samo na ovom tabletu. &lt;a href=https://support.google.com/android/answer/12153449&gt;Saznajte više o postavljanju SD kartice&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatiraj"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formatiranje SD kartice za internu pohranu"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Pohranite aplikacije i medijski sadržaj za uporabu samo na ovom telefonu. &lt;a href=https://support.google.com/android/answer/12153449&gt;Saznajte više o postavljanju SD kartice&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Pohranite aplikacije i medije za uporabu samo na ovom telefonu. &lt;a href=https://support.google.com/android/answer/12153449&gt;Saznajte više o postavljanju SD kartice&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatiraj"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Ili"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formatiranje SD kartice za prijenosnu pohranu"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Pohranite fotografije, videozapise, glazbu i druge sadržaje i pristupite im s drugih uređaja. &lt;a href=https://support.google.com/android/answer/12153449&gt;Saznajte više o postavljanju SD kartice&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Pohranite fotografije, videozapise, glazbu i druge sadržaje i pristupajte im s drugih uređaja. &lt;a href=https://support.google.com/android/answer/12153449&gt;Saznajte više o postavljanju SD kartice&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatiraj"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Postavi kasnije"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Formatirati medij <xliff:g id="NAME">^1</xliff:g>?"</string>
@@ -1871,12 +1876,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"Kada izradite widget, aplikacija može pristupiti svemu što se prikazuje.\n\nAplikacija: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nWidget: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"Uvijek dopusti aplikaciji <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> izradu widgeta i pristupanje njihovim podacima"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"Korisnička statistika"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"Poredaj po vremenu upotrebe"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"Poredaj po zadnjoj upotrebi"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"Poredaj po nazivu aplikacije"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"Posljednja upotreba"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"Vrijeme upotrebe"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"Pristupačnost"</string>
@@ -4836,8 +4838,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Nagrade po pojedinačnom događaju"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Nagrade po sekundi trajanja događaja"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"Maksimalan broj nagrada po danu"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"Instalacija aplikacije"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Glavna aktivnost"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Obavijest je viđena"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Obavijest je viđena u roku od 15 minuta"</string>
@@ -4899,24 +4900,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Pogrešna zaporka"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Da biste počeli slušati, centrirajte QR kôd u nastavku"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR kôd nije u važećem formatu"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Mobilne skupne aplikacije"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Mobilne skupne aplikacije"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Informacije o transparentnosti za mobilne skupne aplikacije"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Sadrži oglase"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Informacije o razvojnim programerima"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Podaci za kontakt"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Opis"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Pravila o privatnosti"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategorija"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Mobilna skupna aplikacija"</string>
 </resources>
