--- a/res/values-ka/strings.xml
+++ b/res/values-ka/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"თქვენ უკვე დაამატეთ თითის ანაბეჭდების მაქსიმალური რაოდენობა"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"მეტი თითის ანაბეჭდის დამატება ვერ ხერხდება"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"„<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“-ის წაშლა"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"ამ მოქმედებით წაიშლება თითის ანაბეჭდის სურათები და თქვენს მოწყობილობაზე შენახული მოდელები, რომლებიც ასოცირებულია „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“-თან"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"ტელეფონის განსაბლოკად ან აპებში ვინაობის დასადასტურებლად ვეღარ შეძლებთ თითის ანაბეჭდის გამოყენებას."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"ამ მოქმედებით წაიშლება თითის ანაბეჭდის სურათები და თქვენს ტელეფონზე შენახული მოდელები, რომლებიც ასოცირებულია „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“-თან"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"ამ მოქმედებით წაიშლება თითის ანაბეჭდის სურათები და თქვენს ტაბლეტზე შენახული მოდელები, რომლებიც ასოცირებულია „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“-თან"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"ამ მოქმედებით წაიშლება თითის ანაბეჭდის სურათები და თქვენს მოწყობილობაზე შენახული მოდელები, რომლებიც ასოცირებულია „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“-თან"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"ტელეფონის განსაბლოკად ან აპებში ვინაობის დასადასტურებლად ვეღარ შეძლებთ თითის ანაბეჭდის გამოყენებას."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"ტაბლეტის განსაბლოკად ან აპებში ვინაობის დასადასტურებლად ვეღარ შეძლებთ თითის ანაბეჭდის გამოყენებას."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"მოწყობილობის განსაბლოკად ან აპებში ვინაობის დასადასტურებლად ვეღარ შეძლებთ თითის ანაბეჭდის გამოყენებას."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"თქვენ ვეღარ შეძლებთ თითის ანაბეჭდის გამოყენებას სამსახურის პროფილის განსაბლოკად, შენაძენების ავტორიზაციისთვის თუ სამსახურის აპებში შესასვლელად."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"დაშიფვრა"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"ტაბლეტის დაშიფვრა"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"სრული გარჩევადობა მეტად მოიხმარს ბატარეას. თქვენი გარჩევადობის გადართვამ შეიძლება გამოიწვიოს ზოგიერთი აპის გადატვირთვა."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"არჩეულია"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"ფერები"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"ბუნებრივი"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"გაძლიერებული"</string>
@@ -1304,14 +1309,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"გადაადგილებისას, არ ამოიღოთ <xliff:g id="NAME">^1</xliff:g>. \n\nგადაადგილების დასრულებამდე <xliff:g id="APP">^2</xliff:g> აპი ამ მოწყობილობაში მიუწვდომელი იქნება."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"როგორ გამოიყენებთ <xliff:g id="NAME">^1</xliff:g>-ს?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"SD ბარათის დაფორმატება შიდა მეხსიერებისთვის"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"შეინახეთ აპები და მედია მხოლოდ ამ ტაბლეტზე გამოყენებისთვის. &lt;a href=https://support.google.com/android/answer/12153449&gt;შეიტყვეთ მეტი SD ბარათის დაყენების შესახებ&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"შეინახეთ აპები და მედია მხოლოდ ამ ტაბლეტზე გამოყენებისთვის. &lt;a href=https://support.google.com/android/answer/12153449&gt;შეიტყვეთ მეტი SD ბარათის დაყენების შესახებ"</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"ფორმატი"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"SD ბარათის დაფორმატება შიდა მეხსიერებისთვის"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"შეინახეთ აპები და მედია მხოლოდ ამ ტელეფონზე გამოყენებისთვის. &lt;a href=https://support.google.com/android/answer/12153449&gt;შეიტყვეთ მეტი SD ბარათის დაყენების შესახებ&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"შეინახეთ აპები და მედია მხოლოდ ამ ტელეფონზე გამოყენებისთვის. &lt;a href=https://support.google.com/android/answer/12153449&gt;შეიტყვეთ მეტი SD ბარათის დაყენების შესახებ"</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"ფორმატი"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"ან"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"SD ბარათის დაფორმატება პორტატიული მეხსიერებისთვის"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"შეინახეთ ფოტოები, ვიდეოები, მუსიკა და ბევრი სხვა რამ და იქონიეთ მათზე წვდომა სხვა მოწყობილობებიდან. &lt;a href=https://support.google.com/android/answer/12153449&gt;შეიტყვეთ მეტი SD ბარათის დაყენების შესახებ&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"შეინახეთ ფოტოები, ვიდეოები, მუსიკა და ბევრი სხვა რამ და იქონიეთ მათზე წვდომა სხვა მოწყობილობებიდან. &lt;a href=https://support.google.com/android/answer/12153449&gt;შეიტყვეთ მეტი SD ბარათის დაყენების შესახებ"</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"ფორმატი"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"მოგვიანებით დაყენება"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"გსურთ, <xliff:g id="NAME">^1</xliff:g>-ის დაფორმატება?"</string>
@@ -1845,12 +1850,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"ვიჯეტის შექმნის შემდეგ აპს წვდომა ექნება ყველა იმ მონაცემზე, რომელიც ეკრანზე ჩანს.\n\nაპი: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nვიჯეტი: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"<xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>-ს ყოველთვის მიეცეს ვიჯეტების შექმნისა და მათ მონაცემებზე წვდომის უფლება"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"გამოყენების სტატისტიკა"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"დალაგება გამოყენების დროით"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"დალაგება ბოლო გამოყენებით"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"დალაგება აპის სახელის მიხედვით"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"ბოლოს გამოყენებული"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"გამოყენების დრო"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"მარტივი წვდომა"</string>
@@ -4766,8 +4768,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"ჯილდო თითოეული ღონისძიებისთვის"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"ჯილდოები ღონისძიების თითოეულ წამზე"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"ჯილდოს მაქსიმალური რაოდენობა დღეში"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"აპის ინსტალაცია"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"ტოპ აქტივობა"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"შეტყობინება ნანახია"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"შეტყობინება ნანახია 15 წუთის ფარგლებში"</string>
@@ -4829,24 +4830,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"პაროლი არასწორია"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"მოსმენის დასაწყებად ცენტრში მოაქციეთ ქვემოთ მოცემული QR კოდი"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR კოდის ფორმატი არასწორია"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"მობილური შეფუთული აპები"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"მობილური შეფუთული აპები"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"მობილური შეფუთული აპების გამჭვირვალობის ინფორმაცია"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"შეიცავს რეკლამებს"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"დეველოპერ(ებ)ის ინფორმაცია"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"საკონტაქტო ინფორმაცია"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"აღწერილობა"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"კონფიდენციალურობის დებულება"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"კატეგორია"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"მობილური შეფუთული აპი"</string>
 </resources>
