--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"ನೀವು ಗರಿಷ್ಠ ಸಂಖ್ಯೆಯ ಫಿಂಗರ್ ಪ್ರಿಂಟ್‌ಗಳನ್ನು ಸೇರಿಸಿರುವಿರಿ"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"ಹೆಚ್ಚಿನ ಫಿಂಗರ್ ಪ್ರಿಂಟ್‌ಗಳನ್ನು ಸೇರಿಸಲು ಸಾಧ್ಯವಿಲ್ಲ"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ಅನ್ನು ಅಳಿಸಿ"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"ನಿಮ್ಮ ಸಾಧನದಲ್ಲಿ ಸಂಗ್ರಹವಾಗಿರುವ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ಗೆ ಸಂಬಂಧಿಸಿದ ಫಿಂಗರ್‌ಪ್ರಿಂಟ್ ಚಿತ್ರಗಳು ಮತ್ತು ಮಾಡೆಲ್ ಅನ್ನು ಇದು ಅಳಿಸುತ್ತದೆ"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"ನಿಮ್ಮ ಫೋನ್ ಅನ್‌ಲಾಕ್ ಮಾಡಲು ಅಥವಾ ಆ್ಯಪ್‌ಗಳಲ್ಲಿ ನೀವೇ ಎಂದು ಪರಿಶೀಲಿಸಲು ನಿಮ್ಮ ಫಿಂಗರ್‌ಪ್ರಿಂಟ್ ಅನ್ನು ಬಳಸಲು ನಿಮಗೆ ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"ನಿಮ್ಮ ಫೋನ್‌ನಲ್ಲಿ ಸಂಗ್ರಹವಾಗಿರುವ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ಗೆ ಸಂಬಂಧಿಸಿದ ಫಿಂಗರ್‌ಪ್ರಿಂಟ್ ಚಿತ್ರಗಳು ಮತ್ತು ಮಾಡೆಲ್ ಅನ್ನು ಇದು ಅಳಿಸುತ್ತದೆ"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌ನಲ್ಲಿ ಸಂಗ್ರಹವಾಗಿರುವ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ಗೆ ಸಂಬಂಧಿಸಿದ ಫಿಂಗರ್‌ಪ್ರಿಂಟ್ ಚಿತ್ರಗಳು ಮತ್ತು ಮಾಡೆಲ್ ಅನ್ನು ಇದು ಅಳಿಸುತ್ತದೆ"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"ನಿಮ್ಮ ಸಾಧನದಲ್ಲಿ ಸಂಗ್ರಹವಾಗಿರುವ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ಗೆ ಸಂಬಂಧಿಸಿದ ಫಿಂಗರ್‌ಪ್ರಿಂಟ್ ಚಿತ್ರಗಳು ಮತ್ತು ಮಾಡೆಲ್ ಅನ್ನು ಇದು ಅಳಿಸುತ್ತದೆ"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"ನಿಮ್ಮ ಫೋನ್ ಅನ್‌ಲಾಕ್ ಮಾಡಲು ಅಥವಾ ಆ್ಯಪ್‌ಗಳಲ್ಲಿ ನೀವೇ ಎಂದು ಪರಿಶೀಲಿಸಲು ನಿಮ್ಮ ಫಿಂಗರ್‌ಪ್ರಿಂಟ್ ಅನ್ನು ಬಳಸಲು ನಿಮಗೆ ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್ ಅನ್‌ಲಾಕ್ ಮಾಡಲು ಅಥವಾ ಆ್ಯಪ್‌ಗಳಲ್ಲಿ ನೀವೇ ಎಂದು ಪರಿಶೀಲಿಸಲು ನಿಮ್ಮ ಫಿಂಗರ್‌ಪ್ರಿಂಟ್ ಅನ್ನು ಬಳಸಲು ನಿಮಗೆ ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"ನಿಮ್ಮ ಸಾಧನವನ್ನು ಅನ್‌ಲಾಕ್ ಮಾಡಲು ಅಥವಾ ಆ್ಯಪ್‌ಗಳಲ್ಲಿ ನೀವೇ ಎಂದು ಪರಿಶೀಲಿಸಲು ನಿಮ್ಮ ಫಿಂಗರ್‌ಪ್ರಿಂಟ್ ಅನ್ನು ಬಳಸಲು ನಿಮಗೆ ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"ನಿಮ್ಮ ಕೆಲಸದ ಪ್ರೊಫೈಲ್ ಅನ್‌ಲಾಕ್ ಮಾಡಲು, ಖರೀದಿಗಳನ್ನು ದೃಢೀಕರಿಸಲು ಅಥವಾ ಕೆಲಸದ ಆ್ಯಪ್‌ಗಳಿಗೆ ಸೈನ್ ಇನ್ ಮಾಡಲು ನಿಮ್ಮ ಫಿಂಗರ್‌ ಪ್ರಿಂಟ್ ಅನ್ನು ಬಳಸಲು ನಿಮಗೆ ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"ಎನ್‌ಕ್ರಿಪ್ಷನ್"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"ಟ್ಯಾಬ್ಲೆಟ್ ಅನ್ನು ಎನ್‌ಕ್ರಿಪ್ಟ್ ಮಾಡಿ"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"ಪೂರ್ಣ ರೆಸಲ್ಯೂಶನ್ ನಿಮ್ಮ ಬ್ಯಾಟರಿಯನ್ನು ಹೆಚ್ಚು ಬಳಸುತ್ತದೆ. ನಿಮ್ಮ ರೆಸಲ್ಯೂಶನ್ ಅನ್ನು ಬದಲಿಸುವುದರಿಂದ ಕೆಲವು ಆ್ಯಪ್‌ಗಳು ಮರುಪ್ರಾರಂಭವಾಗಬಹುದು."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"ಆಯ್ಕೆಮಾಡಲಾಗಿದೆ"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"ಬಣ್ಣಗಳು"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"ಸ್ವಾಭಾವಿಕ"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"ಬೂಸ್ಟ್ ಮಾಡಿರುವುದು"</string>
@@ -1304,14 +1309,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"ಸರಿಸುವಾಗ <xliff:g id="NAME">^1</xliff:g> ಅನ್ನು ತೆಗೆದುಹಾಕಬೇಡಿ. \n\nಈ ಸಾಧನದಲ್ಲಿರುವ <xliff:g id="APP">^2</xliff:g> ಅಪ್ಲಿಕೇಶನ್ ಸರಿಸುವುದು ಪೂರ್ಣಗೊಳ್ಳುವವರೆಗೆ ಲಭ್ಯವಿರುವುದಿಲ್ಲ."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"ಈ <xliff:g id="NAME">^1</xliff:g> ಅನ್ನು ನೀವು ಹೇಗೆ ಬಳಸುತ್ತೀರಿ?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"ಆಂತರಿಕ ಸಂಗ್ರಹಣೆಗಾಗಿ SD ಕಾರ್ಡ್ ಅನ್ನು ಫಾರ್ಮ್ಯಾಟ್ ಮಾಡಿ"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"ಈ ಟ್ಯಾಬ್ಲೆಟ್‌ನಲ್ಲಿ ಮಾತ್ರ ಬಳಸುವುದಕ್ಕಾಗಿ, ಆ್ಯಪ್‌ಗಳು ಹಾಗೂ ಮಾಧ್ಯಮವನ್ನು ಸಂಗ್ರಹಿಸಿ. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD ಕಾರ್ಡ್ ಅನ್ನು ಸೆಟಪ್ ಮಾಡುವುದರ ಕುರಿತು ಇನ್ನಷ್ಟು ತಿಳಿಯಿರಿ&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"ಈ ಟ್ಯಾಬ್ಲೆಟ್‌ನಲ್ಲಿ ಮಾತ್ರ ಬಳಸುವುದಕ್ಕಾಗಿ, ಆ್ಯಪ್‌ಗಳು ಹಾಗೂ ಮಾಧ್ಯಮವನ್ನು ಸಂಗ್ರಹಿಸಿ. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD ಕಾರ್ಡ್ ಅನ್ನು ಸೆಟಪ್ ಮಾಡುವುದರ ಕುರಿತು ಇನ್ನಷ್ಟು ತಿಳಿಯಿರಿ&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"ಫಾರ್ಮ್ಯಾಟ್ ಮಾಡಿ"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"ಆಂತರಿಕ ಸಂಗ್ರಹಣೆಗಾಗಿ SD ಕಾರ್ಡ್ ಅನ್ನು ಫಾರ್ಮ್ಯಾಟ್ ಮಾಡಿ"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"ಈ ಫೋನ್‌ನಲ್ಲಿ ಮಾತ್ರ ಬಳಸುವುದಕ್ಕಾಗಿ, ಆ್ಯಪ್‌ಗಳು ಹಾಗೂ ಮಾಧ್ಯಮವನ್ನು ಸಂಗ್ರಹಿಸಿ. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD ಕಾರ್ಡ್ ಅನ್ನು ಸೆಟಪ್ ಮಾಡುವುದರ ಕುರಿತು ಇನ್ನಷ್ಟು ತಿಳಿಯಿರಿ&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"ಈ ಫೋನ್‌ನಲ್ಲಿ ಮಾತ್ರ ಬಳಸುವುದಕ್ಕಾಗಿ, ಆ್ಯಪ್‌ಗಳು ಹಾಗೂ ಮಾಧ್ಯಮವನ್ನು ಸಂಗ್ರಹಿಸಿ. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD ಕಾರ್ಡ್ ಅನ್ನು ಸೆಟಪ್ ಮಾಡುವುದರ ಕುರಿತು ಇನ್ನಷ್ಟು ತಿಳಿಯಿರಿ&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"ಫಾರ್ಮ್ಯಾಟ್ ಮಾಡಿ"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"ಅಥವಾ"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"ಪೋರ್ಟಬಲ್ ಸಂಗ್ರಹಣೆಗಾಗಿ SD ಕಾರ್ಡ್ ಅನ್ನು ಫಾರ್ಮ್ಯಾಟ್ ಮಾಡಿ"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"ಫೋಟೋಗಳು, ವೀಡಿಯೊಗಳು, ಸಂಗೀತ ಮತ್ತು ಇತ್ಯಾದಿಗಳನ್ನು ಸಂಗ್ರಹಿಸಿ ಹಾಗೂ ಅವುಗಳನ್ನು ಇತರ ಸಾಧನಗಳಲ್ಲಿ ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಿ. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD ಕಾರ್ಡ್ ಅನ್ನು ಸೆಟಪ್ ಮಾಡುವುದರ ಕುರಿತು ಇನ್ನಷ್ಟು ತಿಳಿಯಿರಿ&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"ಫೋಟೋಗಳು, ವೀಡಿಯೊಗಳು, ಸಂಗೀತ ಮತ್ತು ಇತ್ಯಾದಿಗಳನ್ನು ಸಂಗ್ರಹಿಸಿ ಹಾಗೂ ಅವುಗಳನ್ನು ಇತರ ಸಾಧನಗಳಲ್ಲಿ ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಿ. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD ಕಾರ್ಡ್ ಅನ್ನು ಸೆಟಪ್ ಮಾಡುವುದರ ಕುರಿತು ಇನ್ನಷ್ಟು ತಿಳಿಯಿರಿ&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"ಫಾರ್ಮ್ಯಾಟ್ ಮಾಡಿ"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"ನಂತರ ಹೊಂದಿಸಿ"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"ಈ <xliff:g id="NAME">^1</xliff:g> ಅನ್ನು ಫಾರ್ಮ್ಯಾಟ್‌ ಮಾಡುವುದೇ?"</string>
@@ -1845,12 +1850,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"ನೀವು ವಿಜೆಟ್ ಅನ್ನು ರಚಿಸಿದ ನಂತರ, ಪ್ರದರ್ಶಿಸುವ ಎಲ್ಲಾ ಡೇಟಾವನ್ನು ಆ್ಯಪ್ ಪ್ರವೇಶಿಸಬಹುದು.\n\nಆ್ಯಪ್: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nವಿಜೆಟ್: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"ವಿಜೆಟ್‌ಗಳನ್ನು ರಚಿಸಲು ಮತ್ತು ಅವುಗಳ ಡೇಟಾವನ್ನು ಪ್ರವೇಶಿಸಲು <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> ಅನ್ನು ಯಾವಾಗಲೂ ಅನುಮತಿಸಿ"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"ಬಳಕೆಯ ಅಂಕಿಅಂಶಗಳು"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"ಬಳಕೆಯ ಸಮಯದ ಪ್ರಕಾರ ವಿಂಗಡಿಸಿ"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"ಕೊನೆಯ ಬಾರಿ ಬಳಸಿದ ಪ್ರಕಾರ ವಿಂಗಡಿಸಿ"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"ಆ್ಯಪ್ ಹೆಸರಿನ ಪ್ರಕಾರ ವಿಂಗಡಿಸಿ"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"ಕಳೆದ ಬಾರಿಯ ಬಳಕೆ"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"ಬಳಕೆ ಸಮಯ"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"ಪ್ರವೇಶ ಲಭ್ಯತೆ"</string>
@@ -4766,8 +4768,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"ಪ್ರತಿಯೊಂದು ಈವೆಂಟ್‌ನ ಬಹುಮಾನಗಳು"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"ಈವೆಂಟ್ ಅವಧಿಯ ಪ್ರತಿ ಸೆಕೆಂಡಿಗೆ ಬಹುಮಾನಗಳು"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"ಪ್ರತಿ ದಿನದ ಗರಿಷ್ಠ ಬಹುಮಾನಗಳು"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"ಆ್ಯಪ್ ಇನ್‌ಸ್ಟಾಲ್"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"ಉನ್ನತ ಚಟುವಟಿಕೆ"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"ಅಧಿಸೂಚನೆಯನ್ನು ನೋಡಲಾಗಿದೆ"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"ಅಧಿಸೂಚನೆಯನ್ನು 15 ನಿಮಿಷಗಳಲ್ಲಿ ನೋಡಲಾಗಿದೆ"</string>
@@ -4829,24 +4830,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"ಪಾಸ್‌ವರ್ಡ್ ತಪ್ಪಾಗಿದೆ"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"ಆಲಿಸುವುದಕ್ಕೆ ಪ್ರಾರಂಭಿಸಲು, ಕ್ಯಾಮರಾವನ್ನು ಕೆಳಗಿನ QR ಕೋಡ್ ಮೇಲೆ ಕೇಂದ್ರೀಕರಿಸಿ"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR ಕೋಡ್ ಮಾನ್ಯ ಫಾರ್ಮ್ಯಾಟ್‌ನಲ್ಲಿಲ್ಲ"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"ಮೊಬೈಲ್ ಜೊತೆಗೆ ಬಂಡಲ್ ಮಾಡಿದ ಆ್ಯಪ್‌ಗಳು"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"ಮೊಬೈಲ್ ಜೊತೆಗೆ ಬಂಡಲ್ ಮಾಡಿದ ಆ್ಯಪ್‌ಗಳು"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"ಮೊಬೈಲ್ ಬಂಡಲ್ ಮಾಡಿದ ಆ್ಯಪ್‌ಗಳ ಪಾರದರ್ಶಕತೆ ಮಾಹಿತಿ"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"ಜಾಹೀರಾತುಗಳನ್ನು ಒಳಗೊಂಡಿದೆ"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"ಡೆವಲಪರ್(ಗಳ) ಮಾಹಿತಿ"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"ಸಂಪರ್ಕ ಮಾಹಿತಿ"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"ವಿವರಣೆ"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"ಗೌಪ್ಯತೆ ನೀತಿ"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"ವರ್ಗ"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"ಮೊಬೈಲ್ ಜೊತೆಗೆ ಬಂಡಲ್ ಮಾಡಿದ ಆ್ಯಪ್"</string>
 </resources>
