--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Кошулган манжа издеринин саны жогорку чегине жетти"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Дагы манжа издерин кошуу мүмкүн эмес"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Өчүрүү: <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Ушуну менен түзмөгүңүздөгү \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" менен байланышкан манжа изинин сүрөттөрү жана үлгүсү өчүрүлөт"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Манжаңыздын изи менен телефонуңуздун кулпусун ача албай, колдонмолорго кирүүдө өзүңүздү ырастай албай каласыз."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Ушуну менен телефонуңуздагы \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" менен байланышкан манжа изинин сүрөттөрү жана үлгүсү өчүрүлөт"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Ушуну менен планшетиңиздеги \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" менен байланышкан манжа изинин сүрөттөрү жана үлгүсү өчүрүлөт"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Ушуну менен түзмөгүңүздөгү \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" менен байланышкан манжа изинин сүрөттөрү жана үлгүсү өчүрүлөт"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Манжаңыздын изи менен телефонуңуздун кулпусун ача албай, колдонмолорго кирүүдө өзүңүздү ырастай албай каласыз."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Планшетиңиздин кулпусун ачып же колдонмолордо сиз экениңизди ырастоо үчүн манжа изин колдоно албай каласыз."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Түзмөгүңүздүн кулпусун ачып же колдонмолордо сиз экениңизди ырастоо үчүн манжа изин колдоно албай каласыз."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Манжаңыздын изи менен жумуш профилиңиздин кулпусун ача албай, эч нерсе сатып ала албай, колдонмолорго кирүүдө өзүңүздү ырастай албай каласыз."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Шифрлөө"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Планшетти шифрлөө"</string>
@@ -1092,6 +1096,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Толук дааналык режиминде батареяңыз тез отуруп калат. Дааналыкты өзгөртсөңүз, айрым колдонмолор өчүп кайра күйүшү мүмкүн."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"Түстөр"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Табигый"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Күчөтүлгөн"</string>
@@ -1304,14 +1310,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Жылдыруу учурунда <xliff:g id="NAME">^1</xliff:g> түзмөгүн чыгарбаңыз. \n\nУшул түзмөктөгү <xliff:g id="APP">^2</xliff:g> колдонмосу жылдыруу аяктагыча жеткиликтүү болбойт."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Бул <xliff:g id="NAME">^1</xliff:g> кандайча колдонулат?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"SD картаны ички сактагыч үчүн форматтоо"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Колдонмолорду жана медиа файлдарды сактап, ушул планшетте гана колдонуңуз. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD картаны тууралоо жөнүндө кеңири маалымат алыңыз&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Форматтоо"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"SD картаны ички сактагыч үчүн форматтоо"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Колдонмолорду жана медиа файлдарды сактап, ушул түзмөктө гана колдонуңуз. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD картаны тууралоо жөнүндө кеңири маалымат алыңыз&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Форматтоо"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Же"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"SD картаны ташыма сактагыч катары форматтоо"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Сүрөттөрдү, видеолорду, ырларды жана файлдарды сактап, башка түзмөктөрдө колдоно аласыз. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD картаны тууралоо жөнүндө кеңири маалымат&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Форматтоо"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Кийин жөндөө"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Бул <xliff:g id="NAME">^1</xliff:g> форматталсынбы?"</string>
@@ -1845,12 +1854,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"Виджетти түзгөнүңүздөн кийин колдонмо көрсөтүлгөн нерселердин баарына кире алат.\n\nКолдонмо: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nВиджет: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"<xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> виджеттерди түзгөнгө жана жана алардын берилиштерине жеткенге дайым уруксат берилсин"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"Колдонуу статистикасы"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"Колдонуу убакыты боюнча иргөө"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"Акыркы колдонулушу боюнча иргөө"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"Колдонмонун аталышы боюнча иргөө"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"Акыркы жолу колдонулган"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"Колдонулган убакыт"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"Атайын мүмкүнчүлүктөр"</string>
@@ -4766,8 +4772,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Ар бир иш-чарага берилген сыйлыктар"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Иш-чаранын ар бир секундунда сыйлык бар"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"Бир күндө берилүүчү сыйлыктардын саны"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"Колдонмону орнотуу"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Көп аткарылган иш"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Билдирме көрүлдү"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Билдирме 15 мүнөттүн ичинде көрүлдү"</string>
@@ -4829,24 +4834,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Сырсөз туура эмес"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Угуп баштоо үчүн QR кодун борборго жайгаштырыңыз"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR кодунун форматы жараксыз"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Мобилдик түзмөккө алдын ала орнотулган колдонмолор"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Мобилдик түзмөккө алдын ала орнотулган колдонмолор"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Мобилдик түзмөккө алдын ала орнотулган колдонмолордун тунуктугу жөнүндө маалымат"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Жарнамалар бар"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Иштеп чыгуучунун(-лардын) маалыматы"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Байланыш маалыматы"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Учкай маалымат"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Купуялык саясаты"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Категория"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Мобилдик түзмөккө алдын ала орнотулган колдонмо"</string>
 </resources>
