--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -569,8 +569,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Pridėjote maksimalų skaičių kontrolinių kodų"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Negalima pridėti daugiau kontrolinių kodų"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Ištrinti „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Bus ištrinti įrenginyje saugomi kontrolinio kodo vaizdai ir modelis, susieti su „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Negalėsite naudoti kontrolinio kodo, kad atrakintumėte telefoną ar patvirtintumėte savo tapatybę programose."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Bus ištrinti telefone saugomi kontrolinio kodo vaizdai ir modelis, susieti su „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Bus ištrinti planšetiniame kompiuteryje saugomi kontrolinio kodo vaizdai ir modelis, susieti su „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Bus ištrinti įrenginyje saugomi kontrolinio kodo vaizdai ir modelis, susieti su „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Negalėsite naudoti kontrolinio kodo, kad atrakintumėte telefoną ar patvirtintumėte savo tapatybę programose."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Negalėsite naudoti kontrolinio kodo, kad atrakintumėte planšetinį kompiuterį ar patvirtintumėte savo tapatybę programose."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Negalėsite naudoti kontrolinio kodo, kad atrakintumėte įrenginį ar patvirtintumėte savo tapatybę programose."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Negalėsite naudoti kontrolinio kodo, kad atrakintumėte darbo profilį, įgaliotumėte pirkimo operacijas ar prisijungtumėte prie darbo programų."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Šifruotė"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Planšetinio kompiuterio šifravimas"</string>
@@ -1132,6 +1136,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Esant visai skyrai eikvojama daugiau akumuliatoriaus energijos. Perjungus skyrą, kai kurios programos gali būti paleistos iš naujo."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Pasirinkta"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Spalvos"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Natūrali"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Suintensyvinta"</string>
@@ -1346,14 +1351,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Nepašalinkite <xliff:g id="NAME">^1</xliff:g>, kol perkeliama. \n\nPrograma <xliff:g id="APP">^2</xliff:g> šiame įrenginyje nebus pasiekiama, kol perkėlimas bus baigtas."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Kaip naudosite šią saugyklą (<xliff:g id="NAME">^1</xliff:g>)?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formatuokite SD kortelę kaip vidinę atmintį"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Saugokite programas ir mediją, kad galėtumėte tornaudoti tik šiame planšetiniame kompiuteryje. &lt;a href=https://support.google.com/android/answer/12153449&gt;Sužinokite daugiau apie SD kortelės nustatymą&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatuoti"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formatuokite SD kortelę kaip vidinę atmintį"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Saugokite programas ir mediją, kad galėtumėte naudoti tik šiame telefone &lt;a href=https://support.google.com/android/answer/12153449&gt;Sužinokite daugiau apie SD kortelės nustatymą&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatuoti"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Arba"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formatuoti SD kortelę kaip nešiojamąją saugyklą"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Saugokite nuotraukas, vaizdo įrašus, muziką ir kitą turinį, kurį galėsite pasiekti kituose įrenginiuose. &lt;a href=https://support.google.com/android/answer/12153449&gt;Sužinokite daugiau apie SD kortelės nustatymą&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatuoti"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Nustatyti vėliau"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Formatuoti šią saugyklą (<xliff:g id="NAME">^1</xliff:g>)?"</string>
@@ -1893,12 +1901,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"Sukūrus valdiklį, programa galės pasiekti visus pateikiamus duomenis.\n\nPrograma: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nValdiklis: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"Visada leisti „<xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>“ kurti valdiklius ir pasiekti jų duomenis"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"Naudojimo statistika"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"Rūšiuoti pagal naudojimo laiką"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"Rūšiuoti pagal pastarąjį naudojimą"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"Rūšiuoti pagal programos pavadinimą"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"Paskutinį kartą naudota"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"Naudojimo laikas"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"Pritaikymas neįgal."</string>
@@ -4902,8 +4907,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Premijos per vieną įvykį"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Premijos už įvykio trukmę sekundėmis"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"Didžiausias premijų skaičius per dieną"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"Programos diegimas"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Populiariausia veikla"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Pranešimas peržiūrėtas"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Pranešimas peržiūrėtas per 15 minučių"</string>
@@ -4965,24 +4969,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Netinkamas slaptažodis"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Jei norite pradėti klausyti, nustatykite toliau pateiktą QR kodą per vidurį"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR kodas netinkamo formato"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Į rinkinį įtrauktos programos mobiliesiems"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Į rinkinį įtrauktos programos mobiliesiems"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Į rinkinį įtrauktų programų mobiliesiems skaidrumo informacija"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Yra skelbimų"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Kūrėjo (-ų) informacija"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Kontaktinė informacija"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Aprašas"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Privatumo politika"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategorija"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Į rinkinį įtraukta programa mobiliesiems"</string>
 </resources>
