--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"तुम्ही जास्तीत जास्त फिंगरप्रिंट जोडले आहेत"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"आणखी फिंगरप्रिंट जोडू शकत नाही"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' हटवा"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"हे तुमच्या डिव्हाइसवर स्टोअर केलेल्या फिंगरप्रिंट इमेज आणि \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' शी संबंधित असलेले मॉडेल हटवते"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"तुम्ही तुमचा फोन अनलॉक करण्यासाठी किंवा ॲप्समध्ये ते तुम्हीच आहात याची पडताळणी करण्यासाठी तुमची फिंगरप्रिंट वापरू शकणार नाही."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"हे तुमच्या फोनवर स्टोअर केलेल्या फिंगरप्रिंट इमेज आणि \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' शी संबंधित असलेले मॉडेल हटवते"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"हे तुमच्या टॅबलेटवर स्टोअर केलेल्या फिंगरप्रिंट इमेज आणि \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' शी संबंधित असलेले मॉडेल हटवते"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"हे तुमच्या डिव्हाइसवर स्टोअर केलेल्या फिंगरप्रिंट इमेज आणि \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' शी संबंधित असलेले मॉडेल हटवते"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"तुम्ही तुमचा फोन अनलॉक करण्यासाठी किंवा ॲप्समध्ये ते तुम्हीच आहात याची पडताळणी करण्यासाठी तुमची फिंगरप्रिंट वापरू शकणार नाही."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"तुम्ही तुमचे टॅबलेट अनलॉक करण्यासाठी किंवा ॲप्समध्ये ते तुम्हीच आहात याची पडताळणी करण्यासाठी तुमची फिंगरप्रिंट वापरू शकणार नाही."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"तुम्ही तुमचे डिव्हाइस अनलॉक करण्यासाठी किंवा ॲप्समध्ये ते तुम्हीच आहात याची पडताळणी करण्यासाठी तुमची फिंगरप्रिंट वापरू शकणार नाही."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"तुम्ही तुमची फिंगरप्रिंट तुमचे कार्य प्रोफाइल अनलॉक करण्‍यासाठी, खरेदी ऑथोराइझ करण्‍यासाठी किंवा कार्य ॲप्समध्‍ये साइन इन करण्‍यासाठी वापरू शकणार नाही."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"एंक्रिप्शन"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"टॅबलेट एंक्रिप्ट करा"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"पूर्ण रेझोल्यूशन तुमची बॅटरी जास्त वापरते. तुमचे रेझोल्यूशन स्विच केल्याने काही ॲप्स रीस्टार्ट होऊ शकतात."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"निवडले"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"रंग"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"नैसर्गिक"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"बूस्ट केलेला"</string>
@@ -1304,14 +1309,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"हलविण्‍यादरम्यान <xliff:g id="NAME">^1</xliff:g> काढू नका. \n\nहलविणे पूर्ण होईपर्यंत या डिव्‍हाइसवरील <xliff:g id="APP">^2</xliff:g> अ‍ॅप उपलब्‍ध नसेल."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"तुम्ही हे <xliff:g id="NAME">^1</xliff:g> कसे वापराल?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"अंतर्गत स्टोरेजसाठी SD कार्ड फॉरमॅट करा"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"फक्त या टॅबलेटवर वापरण्यासाठी ॲप्स आणि मीडिया स्टोअर करा. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD कार्ड सेट करण्याबद्दल अधिक जाणून घ्या&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"फॉरमॅट करा"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"अंतर्गत स्टोरेजसाठी SD कार्ड फॉरमॅट करा"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"फक्त या फोनवर वापरण्यासाठी ॲप्स आणि मीडिया स्टोअर करा. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD कार्ड सेट करण्याबद्दल अधिक जाणून घ्या&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"फॉरमॅट करा"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"किंवा"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"पोर्टेबल स्टोरेजसाठी SD कार्ड फॉरमॅट करा"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"फोटो, व्हिडिओ, संगीत आणि आणखी बरेच काही स्टोअर करा व ते इतर डिव्हाइसवरून अ‍ॅक्सेस करा. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD कार्ड सेट करण्याबद्दल अधिक जाणून घ्या&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"फॉरमॅट करा"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"नंतर सेट करा"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"<xliff:g id="NAME">^1</xliff:g> हे फॉरमॅट करायचे का?"</string>
@@ -1845,12 +1853,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"तुम्ही विजेट तयार केल्यानंतर, अ‍ॅप्लिकेशन प्रदर्शित केलेले सर्व अ‍ॅक्सेस करू शकते.\n\nअ‍ॅप्लिकेशन: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nविजेट: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"<xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> ना विजेट तयार करण्याची आणि त्यांच्या डेटामध्ये प्रवेश करण्याची नेहमी अनुमती द्या"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"वापरविषयक आकडेवारी"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"वापराच्या वेळेनुसार क्रमाने लावा"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"शेवटच्या वापरानुसार क्रमाने लावा"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"अ‍ॅप हे नावानुसार क्रमाने लावा"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"अंतिम वेळी वापरलेले"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"वापर वेळ"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"अ‍ॅक्सेसिबिलिटी"</string>
@@ -4766,8 +4771,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"प्रति एका इव्हेंटसाठीची रिवॉर्ड"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"इव्हेंटच्या कालावधीच्या प्रति सेकंद रिवॉर्ड"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"प्रति दिवसासाठीची कमाल रिवॉर्ड"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"अ‍ॅप इंस्टॉल करा"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"टॉप अ‍ॅक्टिव्हिटी"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"सूचना पाहिली"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"१५ मिनिटांमध्ये सूचना पाहिली"</string>
@@ -4829,24 +4833,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"चुकीचा पासवर्ड"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"ऐकणे सुरू करण्यासाठी, खालील QR कोड मध्यभागी ठेवा"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR कोडचा फॉरमॅट चुकीचा आहे"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"बंडल केलेली मोबाइल अ‍ॅप्स"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"बंडल केलेली मोबाइल अ‍ॅप्स"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"बंडल केलेली मोबाइल अ‍ॅप्स पारदर्शकता माहिती"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"यामध्ये जाहिराती आहेत"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"डेव्हलपर माहिती"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"संपर्क माहिती"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"वर्णन"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"गोपनीयता धोरण"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"वर्गवारी"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"बंडल केलेले मोबाइल अ‍ॅप"</string>
 </resources>
