--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"အများဆုံးထည့်နိုင်သည့် လက်ဗွေရာအရေအတွက်အထိ ထည့်သွင်းပြီးဖြစ်သည်"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"နောက်ထပ်လက်ဗွေရာများ ထည့်၍မရတော့ပါ"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"‘<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>’ ကို ဖျက်ပါ"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"၎င်းက သင့်စက်တွင်သိုလှောင်ထားသည့် \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' နှင့် ဆက်စပ်သည့် လက်ဗွေပုံများနှင့် နမူနာကို ဖျက်သည်"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"အက်ပ်များတွင် သင်ဖြစ်ကြောင်းအတည်ပြုရန်အတွက် (သို့) သင့်ဖုန်းကို လော့ခ်ဖွင့်ရန်အတွက် သင့်လက်ဗွေကို အသုံးပြု၍ရတော့မည် မဟုတ်ပါ။"</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"၎င်းက သင့်ဖုန်းတွင်သိုလှောင်ထားသည့် ‘<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>’ နှင့် ဆက်စပ်သည့် လက်ဗွေပုံများနှင့် နမူနာကို ဖျက်သည်"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"၎င်းက သင့်တက်ဘလက်တွင်သိုလှောင်ထားသည့် ‘<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>’ နှင့် ဆက်စပ်သည့် လက်ဗွေပုံများနှင့် နမူနာကို ဖျက်သည်"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"၎င်းက သင့်စက်တွင်သိုလှောင်ထားသည့် \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' နှင့် ဆက်စပ်သည့် လက်ဗွေပုံများနှင့် နမူနာကို ဖျက်သည်"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"အက်ပ်များတွင် သင်ဖြစ်ကြောင်းအတည်ပြုရန်အတွက် (သို့) သင့်ဖုန်းကို လော့ခ်ဖွင့်ရန်အတွက် သင့်လက်ဗွေကို အသုံးပြု၍ရတော့မည် မဟုတ်ပါ။"</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"အက်ပ်များတွင် သင်ဖြစ်ကြောင်းအတည်ပြုရန်အတွက် (သို့) သင့်တက်ဘလက်ကို လော့ခ်ဖွင့်ရန်အတွက် သင့်လက်ဗွေကို အသုံးပြု၍ရတော့မည် မဟုတ်ပါ။"</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"အက်ပ်များတွင် သင်ဖြစ်ကြောင်းအတည်ပြုရန်အတွက် (သို့) သင့်စက်ကို လော့ခ်ဖွင့်ရန်အတွက် သင့်လက်ဗွေကို အသုံးပြု၍ရတော့မည် မဟုတ်ပါ။"</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"သင်၏အလုပ်ပရိုဖိုင်ကို လော့ခ်ဖွင့်ရန်၊ ဝယ်ယူမှုများကို ခွင့်ပြုရန် (သို့) အလုပ်သုံးအက်ပ်များသို့ လက်မှတ်ထိုးဝင်ရန်တို့အတွက် သင့်လက်ဗွေကို အသုံးပြု၍ရတော့မည် မဟုတ်ပါ။"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"အသွင်ဝှက်ခြင်း"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"တက်ဘလက်ကို အသွင်ဝှက်ခြင်း"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"ပုံရိပ်ပြတ်သားကိန်းအပြည့်သုံးပါက ဘက်ထရီ ပိုသုံးပါမည်။ သင့်ပုံရိပ်ပြတ်သားကိန်းသို့ ပြောင်းခြင်းက အချို့အက်ပ်များကို ပြန်စစေနိုင်သည်။"</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"ရွေးလိုက်သည်"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"အရောင်များ"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"သဘာဝ"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"အရောင်တင်ထားသည်"</string>
@@ -1304,14 +1309,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"ရွှေ့လျားနေစဉ် <xliff:g id="NAME">^1</xliff:g>ကိုမဖယ်ရှားပါနှင့်။ \n\nဤစက်ပစ္စည်းပေါ်ရှိ <xliff:g id="APP">^2</xliff:g> အပ်ဖ်ကို ရွှေလျားမှုမပြီးသ၍ အသုံးပြု၍ရမည်မဟုတ်ပါ။"</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"<xliff:g id="NAME">^1</xliff:g> ကို သင်မည်သို့ သုံးမလဲ။"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"စက်တွင်းသိုလှောင်ခန်းအတွက် SD ကတ် ဖော်မက်လုပ်ရန်"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"ဤတက်ဘလက်တွင်သာသုံးရန် အက်ပ်နှင့် မီဒီယာများကို သိမ်းနိုင်သည်။ &lt;a href=https://support.google.com/android/answer/12153449&gt;SD ကတ် စနစ်ထည့်သွင်းခြင်းအကြောင်း ပိုမိုလေ့လာရန်&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"ဖော်မက်လုပ်ရန်"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"စက်တွင်းသိုလှောင်ခန်းအတွက် SD ကတ် ဖော်မက်လုပ်ရန်"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"ဤဖုန်းတွင်သာသုံးရန် အက်ပ်နှင့် မီဒီယာများကို သိမ်းနိုင်သည်။ &lt;a href=https://support.google.com/android/answer/12153449&gt;SD ကတ် စနစ်ထည့်သွင်းခြင်းအကြောင်း ပိုမိုလေ့လာရန်&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"ဖော်မက်လုပ်ရန်"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"သို့မဟုတ်"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"ခရီးဆောင်သိုလှောင်ခန်းအတွက် SD ကတ် ဖော်မက်လုပ်ရန်"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"ဓာတ်ပုံ၊ ဗီဒီယို၊ သီချင်းစသည်တို့ သိမ်းနိုင်ပြီး ၎င်းတို့ကို အခြားစက်များတွင် ဖွင့်နိုင်သည်။ &lt;a href=https://support.google.com/android/answer/12153449&gt;SD ကတ် စနစ်ထည့်သွင်းခြင်းအကြောင်း ပိုမိုလေ့လာရန်&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"ဖော်မက်လုပ်ရန်"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"နောက်မှ စနစ်သတ်မှတ်ရန်"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"<xliff:g id="NAME">^1</xliff:g> ကို ဖော်မက်လုပ်လိုပါသလား။"</string>
@@ -1845,12 +1853,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"ဝိဂျက်ပြုလုပ်ပြီးပါက ပြသထားသမျှကို အပလီကေးရှင်းက ဝင်ကြည့်နိုင်သည်။\n\nအပလီကေးရှင်း- <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nဝိဂျက်- <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"<xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> ကို ဝဒ်ဂျက်များဖန်တီးရန်နှင့် ၎င်းတို့၏ အချက်အလက်များကို ရယူရန် အမြဲခွင့်ပြုသည်။"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"အသုံးပြုမှု၏ ကိန်းဂဏန်းအချက်အလက်"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"အသုံးပြုချိန်ဖြင့် စီရန်"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"နောက်ဆုံးသုံးချိန်ဖြင့် စီရန်"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"အက်ပ်အမည်ဖြင့် စီရန်"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"နောက်ဆုံး အကြိမ် အသုံးပြုခဲ့"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"အသုံးပြုအချိန်"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"အများ သုံးစွဲနိုင်မှု"</string>
@@ -4766,8 +4771,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"ဖြစ်ရပ်တစ်ခုလျှင်ရသော ဆုလာဘ်များ"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"အစီအစဉ်ကြာချိန်၏ တစ်စက္ကန့်အတွက် ဆုလာဘ်"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"တစ်ရက်လျှင်ရသော အများဆုံးဆုလာဘ်"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"အက်ပ်ထည့်သွင်းရန်"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"အသုံးအများဆုံး"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"အကြောင်းကြားချက် တွေ့ပြီး"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"၁၅ မိနစ်အတွင်း အကြောင်းကြားချက် တွေ့ပြီး"</string>
@@ -4829,24 +4833,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"စကားဝှက် မှားနေသည်"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"စတင်နားဆင်ရန် အောက်ရှိ QR ကုဒ်ကို အလယ်တွင်ထားပါ"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR ကုဒ်သည် မှန်ကန်သောဖော်မက် မဟုတ်ပါ"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"မိုဘိုင်း တူရာစုထားသော အက်ပ်များ"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"မိုဘိုင်း တူရာစုထားသော အက်ပ်များ"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"မိုဘိုင်း တူရာစုထားသော အက်ပ်များ၏ ပွင့်လင်းမြင်သာမှု အချက်အလက်"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"ကြော်ငြာများ ပါဝင်သည်"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"ဆော့ဖ်ဝဲရေးသူ(များ) အချက်အလက်"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"ဆက်သွယ်ရန် အချက်အလက်များ"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"အကြောင်းအရာ"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"ကိုယ်ရေးအချက်အလက်လုံခြုံမှုဆိုင်ရာ မူဝါဒ"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"အမျိုးအစား"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"မိုဘိုင်း တူရာစုထားသော အက်ပ်"</string>
 </resources>
