--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Je hebt het maximale aantal vingerafdrukken toegevoegd"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Kan geen extra vingerafdrukken toevoegen"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> verwijderen"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Hiermee verwijder je vingerafdruk­afbeeldingen en het aan <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> gekoppelde model die zijn opgeslagen op je apparaat."</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Je kunt je vingerafdruk dan niet meer gebruiken om je telefoon te ontgrendelen of voor verificatie in apps."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Hiermee verwijder je de vingerafdrukfoto\'s en het aan <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> gekoppelde model die zijn opgeslagen op je telefoon"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Hiermee verwijder je de vingerafdrukfoto\'s en het aan <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> gekoppelde model die zijn opgeslagen op je tablet"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Hiermee verwijder je vingerafdruk­afbeeldingen en het aan <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> gekoppelde model die zijn opgeslagen op je apparaat."</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Je kunt je vingerafdruk dan niet meer gebruiken om je telefoon te ontgrendelen of voor verificatie in apps."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Je kunt je vingerafdruk niet gebruiken om je tablet te ontgrendelen of voor verificatie in apps."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Je kunt je vingerafdruk niet gebruiken om je apparaat te ontgrendelen of voor verificatie in apps."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Je kunt je vingerafdruk dan niet meer gebruiken om je werkprofiel te ontgrendelen, aankopen te autoriseren of in te loggen bij werk-apps."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Versleuteling"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Tablet versleutelen"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Volledige resolutie gebruikt meer batterijlading. Als je de resolutie wijzigt, worden sommige apps misschien opnieuw opgestart."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Geselecteerd"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Kleuren"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Natuurlijk"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Versterkt"</string>
@@ -1304,14 +1309,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Verwijder de <xliff:g id="NAME">^1</xliff:g> niet tijdens het verplaatsen. \n\nDe app <xliff:g id="APP">^2</xliff:g> op dit apparaat is pas weer beschikbaar zodra het verplaatsen is voltooid."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Hoe ga je deze <xliff:g id="NAME">^1</xliff:g> gebruiken?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"SD-kaart formatteren voor interne opslag"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Sla apps en media op om alleen op deze tablet te gebruiken. &lt;a href=https://support.google.com/android/answer/12153449&gt;Meer informatie over hoe je een SD-kaart instelt&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Sla apps en media op om alleen op deze tablet te gebruiken. &lt;a href=https://support.google.com/android/answer/12153449&gt;Meer informatie over hoe je een SD-kaart instelt&lt;/a&gt;"</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatteren"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"SD-kaart formatteren voor interne opslag"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Sla apps en media op om alleen op deze telefoon te gebruiken. &lt;a href=https://support.google.com/android/answer/12153449&gt;Meer informatie over hoe je een SD-kaart instelt&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Sla apps en media op om alleen op deze telefoon te gebruiken. &lt;a href=https://support.google.com/android/answer/12153449&gt;Meer informatie over hoe je een SD-kaart instelt&lt;/a&gt;"</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatteren"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Of"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"SD-kaart formatteren voor draagbare opslag"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Sla onder meer foto\'s, video\'s en muziek op en open ze vanaf andere apparaten. &lt;a href=https://support.google.com/android/answer/12153449&gt;Meer informatie over hoe je een SD-kaart instelt&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Sla onder meer foto\'s, video\'s en muziek op en open ze vanaf andere apparaten. &lt;a href=https://support.google.com/android/answer/12153449&gt;Meer informatie over hoe je een SD-kaart instelt&lt;/a&gt;"</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatteren"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Later instellen"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Deze <xliff:g id="NAME">^1</xliff:g> formatteren?"</string>
@@ -1845,12 +1850,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"Nadat je de widget hebt gemaakt, heeft de app toegang tot alle gegevens die worden getoond.\n\nApp: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nWidget: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"<xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> altijd toestaan widgets te maken en toegang tot de widgetgegevens geven"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"Gebruiksstatistieken"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"Sorteren op gebruikstijd"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"Sorteren op laatst gebruikt"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"Sorteren op app-naam"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"Laatst gebruikt"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"Gebruikstijd"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"Toegankelijkheid"</string>
@@ -4766,8 +4768,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Beloningen per afzonderlijk evenement"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Beloningen per seconde van gebeurtenisduur"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"Maximumaantal beloningen per dag"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"App-installatie"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Topactiviteit"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Melding gezien"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Melding gezien binnen 15 minuten"</string>
@@ -4829,24 +4830,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Onjuist wachtwoord"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Centreer de onderstaande QR-code om te beginnen met luisteren"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR-code heeft geen geldige indeling"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Gebundelde mobiele apps"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Gebundelde mobiele apps"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Transparantie-informatie voor gebundelde mobiele apps"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Bevat advertenties"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Informatie over ontwikkelaar(s)"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Contactgegevens"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Beschrijving"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Privacybeleid"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Categorie"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Gebundelde mobiele app"</string>
 </resources>
