--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"ଆପଣ ସର୍ବାଧିକ ସଂଖ୍ୟାର ଆଙ୍ଗୁଠି ଚିହ୍ନ ଯୋଡିଛନ୍ତି"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"ଆଉ ଅଧିକ ଟିପଚିହ୍ନ ଯୋଡିପାରିବ ନାହିଁ"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\'କୁ ଡିଲିଟ କରନ୍ତୁ"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"ଏହା ଆପଣଙ୍କ ଡିଭାଇସରେ ଷ୍ଟୋର କରାଯାଇଥିବା \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ସହ ସମ୍ବନ୍ଧିତ ଟିପଚିହ୍ନର ଛବି ଏବଂ ମଡେଲଗୁଡ଼ିକୁ ଡିଲିଟ କରିଦିଏ"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"ଆପଣ ଆପଣଙ୍କ ଫୋନକୁ ଅନଲକ କରିବା କିମ୍ବା ଆପଗୁଡ଼ିକରେ ଏହା ଆପଣ ବୋଲି ଯାଞ୍ଚ କରିବା ପାଇଁ ଆପଣଙ୍କ ଟିପଚିହ୍ନ ବ୍ୟବହାର କରିବାକୁ ସକ୍ଷମ ହେବେ ନାହିଁ।"</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"ଏହା ଆପଣଙ୍କ ଫୋନରେ ଷ୍ଟୋର କରାଯାଇଥିବା \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ସହ ସମ୍ବନ୍ଧିତ ଟିପଚିହ୍ନର ଇମେଜ ଏବଂ ମଡେଲଗୁଡ଼ିକୁ ଡିଲିଟ କରେ"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"ଏହା ଆପଣଙ୍କ ଟାବଲେଟରେ ଷ୍ଟୋର କରାଯାଇଥିବା \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ସହ ସମ୍ବନ୍ଧିତ ଟିପଚିହ୍ନର ଇମେଜ ଏବଂ ମଡେଲଗୁଡ଼ିକୁ ଡିଲିଟ କରେ"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"ଏହା ଆପଣଙ୍କ ଡିଭାଇସରେ ଷ୍ଟୋର କରାଯାଇଥିବା \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ସହ ସମ୍ବନ୍ଧିତ ଟିପଚିହ୍ନର ଛବି ଏବଂ ମଡେଲଗୁଡ଼ିକୁ ଡିଲିଟ କରିଦିଏ"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"ଆପଣ ଆପଣଙ୍କ ଫୋନକୁ ଅନଲକ କରିବା କିମ୍ବା ଆପଗୁଡ଼ିକରେ ଏହା ଆପଣ ବୋଲି ଯାଞ୍ଚ କରିବା ପାଇଁ ଆପଣଙ୍କ ଟିପଚିହ୍ନ ବ୍ୟବହାର କରିବାକୁ ସକ୍ଷମ ହେବେ ନାହିଁ।"</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"ଆପଣ ଆପଣଙ୍କ ଟାବଲେଟକୁ ଅନଲକ କରିବା କିମ୍ବା ଆପ୍ସରେ ଏହା ଆପଣ ବୋଲି ଯାଞ୍ଚ କରିବା ପାଇଁ ଆପଣଙ୍କ ଟିପଚିହ୍ନ ବ୍ୟବହାର କରିବାକୁ ସକ୍ଷମ ହେବେ ନାହିଁ।"</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"ଆପଣ ଆପଣଙ୍କ ଡିଭାଇସକୁ ଅନଲକ କରିବା କିମ୍ବା ଆପ୍ସରେ ଏହା ଆପଣ ବୋଲି ଯାଞ୍ଚ କରିବା ପାଇଁ ଆପଣଙ୍କ ଟିପଚିହ୍ନ ବ୍ୟବହାର କରିବାକୁ ସକ୍ଷମ ହେବେ ନାହିଁ।"</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"ଆପଣ ଆପଣଙ୍କ ୱାର୍କ ପ୍ରୋଫାଇଲକୁ ଅନଲକ୍ କରିବା, କ୍ରୟଗୁଡ଼ିକୁ ଅନୁମୋଦନ ଦେବା କିମ୍ବା ୱାର୍କ ଆପଗୁଡ଼ିକରେ ସାଇନ୍ ଇନ୍ କରିବା ପାଇଁ ଆପଣଙ୍କ ଟିପଚିହ୍ନ ବ୍ୟବହାର କରିବାକୁ ସକ୍ଷମ ହେବେ ନାହିଁ।"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"ଏନକ୍ରିପ୍ସନ"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"ଟାବଲେଟକୁ ଏନକ୍ରିପ୍ଟ କରନ୍ତୁ"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"ପୂର୍ଣ୍ଣ ରିଜୋଲ୍ୟୁସନ ଆପଣଙ୍କ ବ୍ୟାଟେରୀକୁ ଅଧିକ ବ୍ୟବହାର କରେ। ଆପଣଙ୍କ ରିଜୋଲ୍ୟୁସନକୁ ସ୍ୱିଚ କରିବା ଫଳରେ କିଛି ଆପ୍ସ ରିଷ୍ଟାର୍ଟ ହୋଇପାରେ।"</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"ଚୟନ କରାଯାଇଛି"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"ରଙ୍ଗ"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"ପ୍ରାକୃତିକ"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"ବର୍ଦ୍ଧିତ"</string>
@@ -1304,14 +1309,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"ଘୁଞ୍ଚାଇବାବେଳେ <xliff:g id="NAME">^1</xliff:g>କୁ କାଢ଼ନ୍ତୁ ନାହିଁ। \n\nଏହି ଡିଭାଇସ୍‌ରେ ଥିବା <xliff:g id="APP">^2</xliff:g> ଆପ୍‌, ଏହି କାର୍ଯ୍ୟ ନସରିବା ପର୍ଯ୍ୟନ୍ତ କାମ କରିବ ନାହିଁ।"</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"ଆପଣ କିପରି ଏହି <xliff:g id="NAME">^1</xliff:g>କୁ ବ୍ୟବହାର କରିବେ?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"ଇଣ୍ଟର୍ନାଲ ଷ୍ଟୋରେଜ ପାଇଁ SD କାର୍ଡକୁ ଫର୍ମାଟ କରନ୍ତୁ"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"କେବଳ ଏହି ଟାବଲେଟରେ ବ୍ୟବହାର କରିବା ପାଇଁ ଆପ୍ସ ଓ ମିଡିଆକୁ ଷ୍ଟୋର କରନ୍ତୁ। &lt;a href=https://support.google.com/android/answer/12153449&gt;ଏକ SD କାର୍ଡକୁ ସେଟ ଅପ କରିବା ବିଷୟରେ ଅଧିକ ଜାଣନ୍ତୁ&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"କେବଳ ଏହି ଟାବଲେଟରେ ବ୍ୟବହାର କରିବା ପାଇଁ ଆପ୍ସ ଓ ମିଡିଆକୁ ଷ୍ଟୋର କରନ୍ତୁ। &lt;a href=https://support.google.com/android/answer/12153449&gt;ଏକ SD କାର୍ଡ ସେଟ ଅପ କରିବା ବିଷୟରେ ଅଧିକ ଜାଣନ୍ତୁ&lt;/a&gt;।"</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"ଫର୍ମାଟ କରନ୍ତୁ"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"ଇଣ୍ଟର୍ନାଲ ଷ୍ଟୋରେଜ ପାଇଁ SD କାର୍ଡକୁ ଫର୍ମାଟ କରନ୍ତୁ"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"କେବଳ ଏହି ଫୋନରେ ବ୍ୟବହାର କରିବା ପାଇଁ ଆପ୍ସ ଓ ମିଡିଆକୁ ଷ୍ଟୋର କରନ୍ତୁ। &lt;a href=https://support.google.com/android/answer/12153449&gt;ଏକ SD କାର୍ଡକୁ ସେଟ ଅପ କରିବା ବିଷୟରେ ଅଧିକ ଜାଣନ୍ତୁ&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"କେବଳ ଏହି ଫୋନରେ ବ୍ୟବହାର କରିବା ପାଇଁ ଆପ୍ସ ଓ ମିଡିଆକୁ ଷ୍ଟୋର କରନ୍ତୁ। &lt;a href=https://support.google.com/android/answer/12153449&gt;ଏକ SD କାର୍ଡ ସେଟ ଅପ କରିବା ବିଷୟରେ ଅଧିକ ଜାଣନ୍ତୁ&lt;/a&gt;।"</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"ଫର୍ମାଟ କରନ୍ତୁ"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"କିମ୍ୱା"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"ପୋର୍ଟେବଲ ଷ୍ଟୋରେଜ ପାଇଁ SD କାର୍ଡକୁ ଫର୍ମାଟ କରନ୍ତୁ"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"ଫଟୋ, ଭିଡିଓ, ମ୍ୟୁଜିକ ଏବଂ ଆହୁରି ଅନେକ କିଛି ଷ୍ଟୋର କରନ୍ତୁ ଓ ଅନ୍ୟ ଡିଭାଇସରୁ ଏଗୁଡ଼ିକୁ ଆକ୍ସେସ କରନ୍ତୁ। &lt;a href=https://support.google.com/android/answer/12153449&gt;ଏକ SD କାର୍ଡକୁ ସେଟ ଅପ କରିବା ବିଷୟରେ ଅଧିକ ଜାଣନ୍ତୁ&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"ଫଟୋ, ଭିଡିଓ, ମ୍ୟୁଜିକ ଏବଂ ଆହୁରି ଅନେକ କିଛି ଷ୍ଟୋର କରନ୍ତୁ ଓ ଅନ୍ୟ ଡିଭାଇସଗୁଡ଼ିକରୁ ସେଗୁଡ଼ିକୁ ଆକ୍ସେସ କରନ୍ତୁ। &lt;a href=https://support.google.com/android/answer/12153449&gt;ଏକ SD କାର୍ଡ ସେଟ ଅପ କରିବା ବିଷୟରେ ଅଧିକ ଜାଣନ୍ତୁ&lt;/a&gt;।"</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"ଫର୍ମାଟ କରନ୍ତୁ"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"ପରେ ସେଟଅପ୍‌ କରନ୍ତୁ"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"ଏହି <xliff:g id="NAME">^1</xliff:g>କୁ ଫର୍ମାଟ କରିବେ?"</string>
@@ -1845,12 +1850,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"ଆପଣ ୱିଜେଟ୍ ତିଆରି କରିବା ପରେ, ଏହି ଆପ୍ଲିକେସନଟି ଡିସପ୍ଲେ ହୋଇଥିବା ସବୁକିଛିକୁ ଆକ୍ସେସ୍ କରିପାରିବ।\n\nଆପ୍ଲିକେସନ୍: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nୱିଜେଟ୍: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"ୱିଜେଟ୍‌ ତିଆରି କରିବାକୁ ତଥା ସେଗୁଡ଼ିକର ଡାଟା ଆକସେସ୍‌ କରିବାକୁ <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> କୁ ସର୍ବଦା ଅନୁମତି ଦିଅନ୍ତୁ"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"ବ୍ୟବହାର ପରିସଂଖ୍ୟନ"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"ବ୍ୟବହାରର ସମୟ ଅନୁସାରେ ସର୍ଟ କର"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"ଗତଥରର ବ୍ୟବହାର ଅନୁସାରେ ସର୍ଟ କର"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"ଆପର ନାମ ଅନୁସାରେ ସର୍ଟ କରନ୍ତୁ"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"ଶେଷ ଥର ବ୍ୟବହୃତ"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"ବ୍ୟବହାର ସମୟ"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"ଆକ୍ସେସିବିଲିଟୀ"</string>
@@ -4766,8 +4768,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"ଗୋଟିଏ ଇଭେଣ୍ଟ ପ୍ରତି ପୁରସ୍କାର"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"ଇଭେଣ୍ଟ ଅବଧିର ପ୍ରତି ସେକେଣ୍ଡରେ ରିୱାର୍ଡ"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"ଦୈନିକ ସର୍ବାଧିକ ପୁରସ୍କାର"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"ଆପ ଇନଷ୍ଟଲ"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"ଶ୍ରେଷ୍ଠ କାର୍ଯ୍ୟକଳାପ"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"ବିଜ୍ଞପ୍ତି ଦେଖାଯାଇଛି"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"ବିଜ୍ଞପ୍ତି 15 ମିନିଟ୍ ଭିତରେ ଦେଖାଯାଇଛି"</string>
@@ -4829,24 +4830,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"ଭୁଲ ପାସୱାର୍ଡ"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"ଶୁଣିବା ଆରମ୍ଭ କରିବା ପାଇଁ, ନିମ୍ନରେ ଥିବା QR କୋଡକୁ କେନ୍ଦ୍ରରେ ରଖନ୍ତୁ"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR କୋଡ ଏକ ବୈଧ ଫର୍ମାଟ ନୁହେଁ"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"ବଣ୍ଡଲ କରାଯାଇଥିବା ମୋବାଇଲ ଆପ୍ସ"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"ବଣ୍ଡଲ କରାଯାଇଥିବା ମୋବାଇଲ ଆପ୍ସ"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"ବଣ୍ଡଲ କରାଯାଇଥିବା ମୋବାଇଲ ଆପ୍ସର ଟ୍ରାନ୍ସପରେନ୍ସି ସୂଚନା"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"ଏଥିରେ ବିଜ୍ଞାପନଗୁଡ଼ିକ ଅଛି"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"ଡେଭେଲପର(ମାନ)ଙ୍କ ସୂଚନା"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"କଣ୍ଟାକ୍ଟ ସୂଚନା"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"ବର୍ଣ୍ଣନା"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"ଗୋପନୀୟତା ନୀତି"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"ବର୍ଗ"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"ବଣ୍ଡଲ କରାଯାଇଥିବା ମୋବାଇଲ ଆପ"</string>
 </resources>
