--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -569,8 +569,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Вы уже добавили максимальное количество отпечатков"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Больше нельзя добавить отпечатки пальцев"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Удаление отпечатка пальца \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\""</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Изображения и модель отпечатка \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" будут удалены с устройства."</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Вы больше не сможете использовать отпечаток пальца для разблокировки телефона и подтверждения своей личности в приложениях."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Изображения и модель отпечатка \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" будут удалены с телефона."</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Изображения и модель отпечатка \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" будут удалены с планшета."</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Изображения и модель отпечатка \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" будут удалены с устройства."</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Вы больше не сможете использовать отпечаток пальца для разблокировки телефона и подтверждения своей личности в приложениях."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Вы больше не сможете использовать отпечаток пальца для разблокировки планшета и подтверждения личности в приложениях."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Вы больше не сможете использовать отпечаток пальца для разблокировки устройства и подтверждения личности в приложениях."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Вы больше не сможете использовать отпечаток пальца для разблокировки рабочего профиля, подтверждения покупок и входа в рабочие приложения."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Шифрование"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Зашифровать данные"</string>
@@ -1132,6 +1136,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Исходное разрешение расходует больше заряда. При смене разрешения некоторые приложения могут перезапуститься."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"Цвета"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Натуральные"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Яркие"</string>
@@ -1346,14 +1352,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Не извлекайте устройство \"<xliff:g id="NAME">^1</xliff:g>\" во время переноса.\n\nПока он не завершится, приложение \"<xliff:g id="APP">^2</xliff:g>\" будет недоступно на этом устройстве."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Как будет использоваться <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Форматирование SD-карты как внутренней памяти"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Хранить приложения и медиафайлы для использования только на этом планшете. Подробнее &lt;a href=https://support.google.com/android/answer/12153449&gt;о том, как настроить SD-карту&lt;/a&gt;…"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Форматировать"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Форматирование SD-карты как внутренней памяти"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Вы сможете хранить на ней приложения и медиафайлы для использования только на этом телефоне. Подробнее &lt;a href=https://support.google.com/android/answer/12153449&gt;о том, как настроить SD-карту&lt;/a&gt;…"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Форматировать"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Или"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Форматирование SD-карты как съемного накопителя"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Вы сможете хранить на ней фото, видео, музыку и файлы для использования на других устройствах. Подробнее &lt;a href=https://support.google.com/android/answer/12153449&gt;о том, как настроить SD-карту&lt;/a&gt;…"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Форматировать"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Настроить позже"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Отформатировать устройство \"<xliff:g id="NAME">^1</xliff:g>\"?"</string>
@@ -1893,12 +1902,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"Когда вы создаете виджет, приложение получает доступ ко всем его данным.\n\nПриложение \"<xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\"\nВиджет <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"Всегда разрешать приложению \"<xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\" создавать виджеты и получать их данные"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"Статистика использования"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"Сортировать по времени исп."</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"Сортировать по посл. использ."</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"Сортировать по названию"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"Последнее использование"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"Время использования"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"Спец. возможности"</string>
@@ -4902,8 +4908,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Бонусы за одно событие"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Число бонусов за каждую секунду события"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"Максимальное число бонусов в день"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"Установить приложение"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Максимальная активность"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Уведомление просмотрено"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Уведомление просмотрено &lt; 15 мин. назад"</string>
@@ -4965,24 +4970,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Пароль указан неверно."</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Чтобы прослушать аудио, поместите QR-код в центр."</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"Недопустимый формат QR-кода."</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Наборы App Bundle для мобильных приложений"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Наборы App Bundle для мобильных приложений"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Доступность данных наборов App Bundle для мобильных приложений"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Есть реклама"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Информация от разработчиков"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Контактная информация"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Описание"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Политика конфиденциальности"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Категория"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Набор App Bundle для мобильного приложения"</string>
 </resources>
