--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"ඔබ ඇඟිලි සලකුණු උපරිම සංඛ්‍යාව එක් කර ඇත"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"තවත් ඇඟිලි සලකුණු එක් කළ නොහැකිය"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' මකන්න"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"මෙය ඔබගේ උපාංගයෙහි ගබඩා වී ඇති ඇඟිලි සලකුණු රූප සහ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' හා ආශ්‍රිත මාදිලි මකයි"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"ඔබගේ දුරකථනය අගුලු හැරීමට හෝ යෙදුම්වල ඒ ඔබ බව තහවුරු කිරීමට ඔබගේ ඇඟිලි සලකුණ භාවිත කිරීමට ඔබට නොහැකි වනු ඇත."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"මෙය ඔබේ දුරකථනයෙහි ගබඩා වී ඇති ඇඟිලි සලකුණු රූප සහ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' සමග ආශ්‍රිත ආකෘතිය මකයි"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"මෙය ඔබේ ටැබ්ලටයෙහි ගබඩා වී ඇති ඇඟිලි සලකුණු රූප සහ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' සමග ආශ්‍රිත ආකෘතිය මකයි"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"මෙය ඔබගේ උපාංගයෙහි ගබඩා වී ඇති ඇඟිලි සලකුණු රූප සහ \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' හා ආශ්‍රිත මාදිලි මකයි"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"ඔබගේ දුරකථනය අගුලු හැරීමට හෝ යෙදුම්වල ඒ ඔබ බව තහවුරු කිරීමට ඔබගේ ඇඟිලි සලකුණ භාවිත කිරීමට ඔබට නොහැකි වනු ඇත."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"ඔබේ ටැබ්ලටය අගුළු හැරීමට හෝ යෙදුම්වල ඒ ඔබ බව සත්‍යාපනය කිරීමට ඔබේ ඇඟිලි සලකුණ භාවිත කිරීමට ඔබට නොහැකි වනු ඇත."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"ඔබේ උපාංගය අගුළු හැරීමට හෝ යෙදුම්වල ඒ ඔබ බව සත්‍යාපනය කිරීමට ඔබේ ඇඟිලි සලකුණ භාවිත කිරීමට ඔබට නොහැකි වනු ඇත."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"ඔබට ඔබගේ කාර්යාල පැතිකඩ අගුලු හැරීමට, මිලදී ගැනීම්වලට අවසර දීමට, හෝ කාර්යාල යෙදුම්වලට පිරීමට ඔබගේ ඇඟිලි සලකුණ භාවිත කළ නොහැකි වනු ඇත."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"සංකේතනය"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"ටැබ්ලටය සංකේතනය කිරීම"</string>
@@ -1092,6 +1096,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"පූර්ණ විභේදනය ඔබේ බැටරිය වැඩියෙන් භාවිත කරයි. ඔබේ විභේදනය මාරු කිරීම සමහර යෙදුම් නැවත ආරම්භ කිරීමට හේතු විය හැක."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"වර්ණ"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"ස්වභාවික"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"වැඩි කළ"</string>
@@ -1304,14 +1310,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"ගෙන යාම අතරතුර <xliff:g id="NAME">^1</xliff:g> ඉවත් කරන්න එපා. \n\nගෙන යාම සම්පූර්ණ වන තුරු මෙම උපාංගයේ <xliff:g id="APP">^2</xliff:g> යෙදුම ලබාගත නොහැකි වනු ඇත."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"ඔබ මෙම <xliff:g id="NAME">^1</xliff:g> භාවිත කරන්නේ කෙසේද?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"අභ්‍යන්තර ආචයනය සඳහා SD කාඩ්පත ෆෝමැට් කරන්න"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"මෙම ටැබ්ලටයෙහි පමණක් භාවිතා කිරීමට යෙදුම් සහ මාධ්‍ය ගබඩා කරන්න. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD කාඩ්පතක් පිහිටුවීම පිළිබඳව තව දැන ගන්න&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"ෆෝමැට් කරන්න"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"අභ්‍යන්තර ආචයනය සඳහා SD කාඩ්පත ෆෝමැට් කරන්න"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"මෙම දුරකථනයෙහි පමණක් භාවිතා කිරීමට යෙදුම් සහ මාධ්‍ය ගබඩා කරන්න. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD කාඩ්පතක් පිහිටුවීම පිළිබඳව තව දැන ගන්න&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"ෆෝමැට් කරන්න"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"හෝ"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"ගෙන යා හැකි ආචයනය සඳහා SD කාඩ්පත ෆෝමැට් කරන්න"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"ඡායාරූප, වීඩියෝ, සංගීතය, සහ තවත් දේ ගබඩා කරන්න සහ වෙනත් උපාංගවලින් ඒවාට ප්‍රවේශ වන්න. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD කාඩ්පතක් පිහිටුවීම පිළිබඳව තව දැන ගන්න&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"ෆෝමැට් කරන්න"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"පසුව පිහිටුවන්න"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"මෙම <xliff:g id="NAME">^1</xliff:g> හැඩ ගන්වන්නද?"</string>
@@ -1845,12 +1854,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"ඔබ විජට් තැනීමෙන් පසු, යෙදුමට සංදර්ශනය වන සියල්ලට ප්‍රවේශ විය හැකිය.\n\nයෙදුම: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nවිජට්: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"<xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> හට සෑමවිටම විජට සෑදීමට සහ ඒවායේ දත්ත වෙත ප්‍රවේශ වීමට ඉඩ ලබා දෙන්න"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"භාවිතා සංඛ්‍යාන"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"භාවිත කාලය අනුව වර්ග කරන්න"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"අවසන් භාවිත කාලය අනුව සුබෙදන්න"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"යෙදුමේ නම අනුව වර්ග කරන්න"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"අවසන් වරට භාවිත කළේ"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"භාවිත කාලය"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"ප්‍රවේශ්‍යතාව"</string>
@@ -4766,8 +4772,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"තනි සිදුවීමකට ත්‍යාග"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"සිදුවීම් කාල සීමාවේ තත්පරයකට ත්‍යාග"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"දිනකට උපරිම ත්‍යාග"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"යෙදුම ස්ථාපනය"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"ඉහළම ක්‍රියාකාරකම"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"දැනුම්දීම දකින ලදි"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"දැනුම්දීම මිනිත්තු 15ක් ඇතුළත දකින ලදි"</string>
@@ -4829,24 +4834,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"වැරදි මුරපදයකි"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"සවන් දීම ආරම්භ කිරීමට, පහත QR කේතය මධ්‍යගත කරන්න"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR කේතය වලංගු ආකෘතියක් නොවේ"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"ජංගම පොදි යෙදුම්"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"ජංගම පොදි යෙදුම්"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"ජංගම පොදි යෙදුම් පාරදෘෂ්‍යතාවයේ තතු"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"වෙළඳ දැන්වීම් අඩංගුයි"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"සංවර්ධක තොරතුරු"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"සම්බන්ධතා තොරතුරු"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"විස්තරය"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"රහස්‍යතා ප්‍රතිපත්තිය"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"ප්‍රවර්ගය"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"ජංගම පොදි යෙදුම"</string>
 </resources>
