--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -575,8 +575,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Pridali ste maximálny počet odtlačkov prstov"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Nie je možné pridať ďalšie odtlačky prstov"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Odstráňte odtlačok <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Týmto odstránite snímky a model odtlačku prsta „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“, ktoré sú uložené vo vašom zariadení."</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Nebudete môcť odomykať telefón ani overovať svoju totožnosť v aplikáciách odtlačkom prsta."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Týmto odstránite obrázky a model odtlačku prsta spojené s identifikátorom <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>, ktoré sú uložené vo vašom telefóne"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Týmto odstránite obrázky a model odtlačku prsta spojené s identifikátorom <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>, ktoré sú uložené vo vašom tablete"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Týmto odstránite snímky a model odtlačku prsta „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“, ktoré sú uložené vo vašom zariadení."</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Nebudete môcť odomykať telefón ani overovať svoju totožnosť v aplikáciách odtlačkom prsta."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"V aplikáciách nebudete môcť odomykať tablet ani overovať svoju totožnosť odtlačkom prsta."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"V aplikáciách nebudete môcť odomykať zariadenie ani overovať svoju totožnosť odtlačkom prsta."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Nebudete môcť odomykať pracovný profil, schvaľovať nákupy ani sa prihlasovať do pracovných aplikácií odtlačkom prsta."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Šifrovanie"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Šifrovať tablet"</string>
@@ -1138,6 +1142,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Plné rozlíšenie využíva vo väčšej miere batériu. Ak rozlíšenie prepnete, niektoré aplikácie sa môžu reštartovať."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Vybrané"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Farby"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Prirodzené"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Zosilnené"</string>
@@ -1352,14 +1357,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Úložisko <xliff:g id="NAME">^1</xliff:g> počas presunu neodoberajte. \n\nAplikácia <xliff:g id="APP">^2</xliff:g> bude v tomto zariadení k dispozícii až po dokončení presunu."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Ako budete používať zariadenie <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formátovať SD kartu ako interné úložisko"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Ukladajte aplikácie a médiá na použitie výhradne v tomto tablete. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ďalšie informácie o nastavení SD karty&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Ukladajte aplikácie a médiá na použitie výhradne v tomto tablete. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ďalšie informácie o nastavení SD karty&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formátovať"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formátovať SD kartu ako interné úložisko"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Ukladajte aplikácie a médiá na použitie výhradne v tomto telefóne. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ďalšie informácie o nastavení SD karty&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Ukladajte aplikácie a médiá na použitie výhradne v tomto telefóne. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ďalšie informácie o nastavení SD karty&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formátovať"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Alebo"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formátovať SD kartu ako prenosné úložisko"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Ukladajte fotky, videá, hudbu aj ďalší obsah a získavajte k nim prístup v iných zariadeniach. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ďalšie informácie o nastavení SD karty&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Ukladajte fotky, videá, hudbu aj ďalší obsah a získavajte k nim prístup v iných zariadeniach. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ďalšie informácie o nastavení SD karty&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formátovať"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Nastaviť neskôr"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Formátovať úložisko <xliff:g id="NAME">^1</xliff:g>?"</string>
@@ -3214,7 +3219,7 @@
     <string name="dock_audio_media_enabled" msgid="4039126523653131281">"Iba zvukové médiá"</string>
     <string name="emergency_tone_silent" msgid="5048069815418450902">"Ticho"</string>
     <string name="emergency_tone_alert" msgid="1977698889522966589">"Tóny"</string>
-    <string name="emergency_tone_vibrate" msgid="6282296789406984698">"Vibrovanie"</string>
+    <string name="emergency_tone_vibrate" msgid="6282296789406984698">"Vibrácie"</string>
     <string name="boot_sounds_title" msgid="5033062848948884111">"Zvuky pri spustení"</string>
     <string name="live_caption_title" msgid="8617086825712756983">"Živý prepis"</string>
     <string name="live_caption_summary" msgid="2898451867595161809">"Automatické titulkovanie médií"</string>
@@ -4967,24 +4972,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Nesprávne heslo"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Ak chcete začať počúvať, umiestnite QR kód do stredu nižšie"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR kód nie je platný formát"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Balík mobilných aplikácií"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Balík mobilných aplikácií"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Informácie o transparentnosti balíka mobilných aplikácií"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Obsahuje reklamy"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Informácie o vývojároch"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Kontaktné údaje"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Opis"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Pravidlá ochrany súkromia"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategória"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Balík mobilnej aplikácie"</string>
 </resources>
