--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Umeongeza idadi ya juu inayoruhusiwa ya alama za kidole"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Haiwezi kuongeza alama zaidi za kidole"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Futa \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\'"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Hatua hii hufuta miundo na picha za alama za vidole zinazohusiana na \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' zilizohifadhiwa kwenye kifaa chako"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Hutaweza kutumia alama ya kidole chako kufungua simu yako au kuthibitisha kuwa ni wewe katika programu."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Hatua hii hufuta miundo na picha za alama za vidole zinazohusiana na \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' zilizohifadhiwa kwenye simu yako"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Hatua hii hufuta miundo na picha za alama za vidole zinazohusiana na \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' zilizohifadhiwa kwenye kompyuta kibao yako"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Hatua hii hufuta miundo na picha za alama za vidole zinazohusiana na \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' zilizohifadhiwa kwenye kifaa chako"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Hutaweza kutumia alama ya kidole chako kufungua simu yako au kuthibitisha kuwa ni wewe katika programu."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Hutaweza kutumia alama ya kidole chako kufungua kompyuta kibao yako au kuthibitisha kuwa ni wewe katika programu."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Hutaweza kutumia alama ya kidole chako kufungua kifaa chako au kuthibitisha kuwa ni wewe katika programu."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Hutaweza kutumia alama ya kidole chako kufungua wasifu wako wa kazini, kuidhinisha ununuzi au kuingia katika akaunti za programu za kazini."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Usimbaji fiche"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Simba kompyuta kibao kwa njia fiche"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Ubora kamili wa skrini hutumia zaidi betri yako. Kubadili ubora wa skrini yako kunaweza kusababisha baadhi ya programu zizime kisha ziwake."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Umechaguliwa"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Rangi"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Asili"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Imeongezwa Rangi"</string>
@@ -1304,14 +1309,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Usionde <xliff:g id="NAME">^1</xliff:g> wakati wa kuhamisha. \n\nProgramu ya <xliff:g id="APP">^2</xliff:g> haitapatikana kwenye kifaa hiki hadi ukamilishe kuhamisha."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Ungependa kutumia <xliff:g id="NAME">^1</xliff:g> hii vipi?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Andaa kadi ya SD kwa ajili ya hifadhi ya mfumo"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Hifadhi programu na maudhui ya kutumia kwenye kompyuta kibao hii tu. &lt;a href=https://support.google.com/android/answer/12153449&gt;Pata maelezo zaidi kuhusu kuweka mipangilio kwenye kadi ya SD&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Andaa diski"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Andaa kadi ya SD kwa ajili ya hifadhi ya mfumo"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Hifadhi programu na maudhui ya kutumia kwenye simu hii tu. &lt;a href=https://support.google.com/android/answer/12153449&gt;Pata maelezo zaidi kuhusu kuweka mipangilio kwenye kadi ya SD&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Andaa diski"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Au"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Andaa kadi ya SD kwa ajili ya hifadhi inayohamishika"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Hifadhi picha, video, muziki na zaidi, na uvifikie katika vifaa vingine. &lt;a href=https://support.google.com/android/answer/12153449&gt;Pata maelezo zaidi kuhusu kuweka mipangilio kwenye kadi ya SD&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Andaa diski"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Weka mipangilio baadaye"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Ungependa kuandaa <xliff:g id="NAME">^1</xliff:g>?"</string>
@@ -1845,12 +1853,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"Baada ya kuunda wijeti, programu inaweza kufikia kila kitu kinachoonyeshwa.\n\nProgramu: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nWijeti: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"Daima ruhusu <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> kuunda wijeti na kufikia data yao"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"Takwimu za utumiaji"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"Panga kulingana na muda wa matumizi"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"Panga kulingana na mara ya mwisho kutumika"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"Panga kulingana na jina la programu"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"Mara ya mwisho ilipotumika"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"Muda wa utumiaji"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"Ufikivu"</string>
@@ -4766,8 +4771,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Zawadi kwa kila tukio"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Zawadi kwa kila sekunde ya muda wa tukio"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"Idadi ya Juu ya Zawadi kwa Siku"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"Usakinishaji wa Programu"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Shughuli Maarufu"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Ameona Arifa"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Mtumiaji Aliona Arifa Ndani ya Dakika 15"</string>
@@ -4829,24 +4833,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Nenosiri si sahihi"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Ili uanze kusikiliza, weka katikati msimbo wa QR ulio hapa chini"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"Msimbo wa QR si muundo sahihi"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Programu zilizojumuishwa kwenye kifaa cha mkononi"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Programu zilizojumuishwa kwenye kifaa cha mkononi"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Maelezo ya uwazi ya programu zilizojumuishwa kwenye kifaa cha mkononi"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Ina matangazo"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Maelezo ya Wasanidi Programu"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Maelezo ya Mawasiliano"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Maelezo"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Sera ya Faragha"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Aina"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Programu Iliyojumuishwa kwenye Kifaa cha Mkononi"</string>
 </resources>
