--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"அனுமதிக்கப்படும் அதிகபட்சக் கைரேகைகளைச் சேர்த்துவிட்டீர்கள்"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"மேலும் கைரேகைகளைச் சேர்க்க முடியவில்லை"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ஐ நீக்கவா?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"இந்தச் சாதனத்தில் சேமித்து வைக்கப்பட்டிருக்கும் \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' உடன் தொடர்புடைய கைரேகைப் படங்களையும் பதிவுகளையும் இது நீக்கிவிடும்"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"மொபைலை அன்லாக் செய்யவோ நீங்கள்தான் என்பதை ஆப்ஸில் உறுதிப்படுத்தவோ உங்கள் கைரேகையைப் பயன்படுத்த முடியாது."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"உங்கள் மொபைலில் சேமிக்கப்பட்டுள்ள, \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' உடன் தொடர்புடைய கைரேகைப் படங்களையும் பதிவுவையும் இது நீக்கும்"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"உங்கள் டேப்லெட்டில் சேமிக்கப்பட்டுள்ள, \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' உடன் தொடர்புடைய கைரேகைப் படங்களையும் பதிவுவையும் இது நீக்கும்"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"இந்தச் சாதனத்தில் சேமித்து வைக்கப்பட்டிருக்கும் \'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' உடன் தொடர்புடைய கைரேகைப் படங்களையும் பதிவுகளையும் இது நீக்கிவிடும்"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"மொபைலை அன்லாக் செய்யவோ நீங்கள்தான் என்பதை ஆப்ஸில் உறுதிப்படுத்தவோ உங்கள் கைரேகையைப் பயன்படுத்த முடியாது."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"உங்கள் டேப்லெட்டை அன்லாக் செய்யவோ ஆப்ஸைப் பயன்படுத்துவது நீங்கள்தான் என்பதை உறுதிப்படுத்தவோ உங்கள் கைரேகையைப் பயன்படுத்த முடியாது."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"உங்கள் சாதனத்தை அன்லாக் செய்யவோ ஆப்ஸைப் பயன்படுத்துவது நீங்கள்தான் என்பதை உறுதிப்படுத்தவோ உங்கள் கைரேகையைப் பயன்படுத்த முடியாது."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"பணிக் கணக்கை அன்லாக் செய்யவோ பர்ச்சேஸ்களை அங்கீகரிக்கவோ பணி ஆப்ஸில் உள்நுழையவோ உங்கள் கைரேகையைப் பயன்படுத்த முடியாது."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"என்க்ரிப்ஷன்"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"டேப்லெட்டை என்க்ரிப்ட் செய்யுங்கள்"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080பி. FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440பி. QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"முழுத் தெளிவுத்திறனை அமைத்தால் பேட்டரி அதிகமாகப் பயன்படுத்தப்படும். தெளிவுத்திறனை மாற்றினால் சில ஆப்ஸ் மீண்டும் தொடங்கக்கூடும்."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"தேர்ந்தெடுக்கப்பட்டது"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"வண்ணங்கள்"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"இயற்கை வண்ணம்"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"பூஸ்ட் செய்யப்பட்டது"</string>
@@ -1304,14 +1309,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"நகர்த்தும்போது <xliff:g id="NAME">^1</xliff:g>ஐ அகற்ற வேண்டாம். \n\nநகர்த்தி முடிக்கும்வரை, சாதனத்தில் <xliff:g id="APP">^2</xliff:g> ஆப்ஸ் கிடைக்காது."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"<xliff:g id="NAME">^1</xliff:g>ஐ எப்படிப் பயன்படுத்துவீர்கள்?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"அகச் சேமிப்பகத்திற்கு SD கார்டை ஃபார்மேட் செய்தல்"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"இந்த டேப்லெட்டில் மட்டுமே பயன்படுத்துவதற்கான ஆப்ஸையும் மீடியாவையும் சேமிக்கலாம். &lt;a href=https://support.google.com/android/answer/12153449&gt;SD கார்டை அமைப்பது குறித்து மேலும் அறிக&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"ஃபார்மேட் செய்"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"அகச் சேமிப்பகத்திற்கு SD கார்டை ஃபார்மேட் செய்தல்"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"இந்த மொபைலில் மட்டுமே பயன்படுத்துவதற்கான ஆப்ஸையும் மீடியாவையும் சேமிக்கலாம். &lt;a href=https://support.google.com/android/answer/12153449&gt;SD கார்டை அமைப்பது குறித்து மேலும் அறிக&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"ஃபார்மேட் செய்"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"அல்லது"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"போர்டபிள் ஸ்டோரேஜுக்கு SD கார்டை ஃபார்மேட் செய்தல்"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"படங்கள், வீடியோக்கள், இசை மற்றும் பலவற்றைச் சேமித்து பிற சாதனங்களில் அவற்றை அணுகலாம். &lt;a href=https://support.google.com/android/answer/12153449&gt;SD கார்டை அமைப்பது குறித்து மேலும் அறிக&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"ஃபார்மேட் செய்"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"பின்னர் அமை"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"<xliff:g id="NAME">^1</xliff:g>ஐ ஃபார்மேட் செய்யவா?"</string>
@@ -1845,12 +1853,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"விட்ஜெட்டை உருவாக்கியதும் திரையில் தோன்றும் எல்லாவற்றையும் ஆப்ஸால் அணுக முடியும்.\n\nஆப்ஸ்: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nவிட்ஜெட்: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"விட்ஜெட்களை உருவாக்கவும், அவற்றின் தரவை அணுகவும் எப்போதும் <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> ஐ அனுமதி"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"பயன்பாட்டுப் புள்ளிவிவரங்கள்"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"உபயோக நேரப்படி வரிசைப்படுத்துக"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"கடைசிப் பயன்பாட்டின்படி வரிசைப்படுத்துக"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"ஆப்ஸ் பெயரால் வரிசைப்படுத்துக"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"கடைசியாகப் பயன்படுத்தியது"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"பயன்படுத்திய நேரம்"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"அணுகல்தன்மை"</string>
@@ -4766,8 +4771,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"ஒற்றை நிகழ்வுக்கான ரிவார்டுகள்"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"நிகழ்வில் வினாடிதோறும் ரிவார்டுகள்"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"ஒரு நாளுக்கான அதிகபட்ச ரிவார்டுகள்"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"ஆப்ஸை நிறுவுதல்"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"சிறந்த செயல்பாடு"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"அறிவிப்பு பார்க்கப்பட்டது"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"15 நிமிடங்களுக்குள் பார்க்கப்பட்டது"</string>
@@ -4829,24 +4833,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"தவறான கடவுச்சொல்"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"ஆடியோவைக் கேட்க, கீழுள்ள QR குறியீட்டை மையப்படுத்திக் காட்டுங்கள்"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR குறியீடு சரியான வடிவமைப்பில் இல்லை"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"மொபைல் தொகுப்பு ஆப்ஸ்"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"மொபைல் தொகுப்பு ஆப்ஸ்"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"மொபைல் தொகுப்பு ஆப்ஸின் தெளிவுத்திறன் தகவல்"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"விளம்பரங்கள் உள்ளன"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"டெவெலப்பர்(கள்) தகவல்கள்"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"தொடர்புத் தகவல்"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"விளக்கம்"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"தனியுரிமைக் கொள்கை"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"வகை"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"மொபைல் தொகுப்பு ஆப்ஸ்"</string>
 </resources>
