--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Maksimum sayıda parmak izi eklediniz"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Daha fazla parmak izi eklenemez"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"\"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" adlı parmak izini sil"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Bu işlem, cihazınızda saklanan \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" ile ilişkilendirilmiş parma izi resimlerini ve modeli siler"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Telefonunuzun kilidini açmak veya uygulamalarda kimliğinizi doğrulamak için parmak izinizi kullanamazsınız."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Bu işlem, telefonunuzda saklanan \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" ile ilişkilendirilmiş parmak izi resimlerini ve modeli siler"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Bu işlem, tabletinizde saklanan \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" ile ilişkilendirilmiş parmak izi resimlerini ve modeli siler"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Bu işlem, cihazınızda saklanan \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" ile ilişkilendirilmiş parma izi resimlerini ve modeli siler"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Telefonunuzun kilidini açmak veya uygulamalarda kimliğinizi doğrulamak için parmak izinizi kullanamazsınız."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Tabletinizin kilidini açmak veya uygulamalarda kimliğinizi doğrulamak için parmak izinizi kullanamazsınız."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Cihazınızın kilidini açmak veya uygulamalarda kimliğinizi doğrulamak için parmak izinizi kullanamazsınız."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"İş profilinizin kilidini açmak, satın alma işlemlerini yetkilendirmek veya iş uygulamalarında oturum açmak için parmak izinizi kullanamazsınız."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Şifreleme"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Tableti şifrele"</string>
@@ -1092,6 +1096,8 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Tam çözünürlük daha fazla pil kullanır. Çözünürlük değiştirildiğinde bazı uygulamalar yeniden başlatılabilir."</string>
+    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
+    <skip />
     <string name="color_mode_title" msgid="8666690832113906028">"Renkler"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Doğal"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Zenginleştirilmiş"</string>
@@ -1304,14 +1310,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Taşıma sırasında <xliff:g id="NAME">^1</xliff:g> birimini çıkarmayın. \nTaşıma işlemi tamamlanana kadar bu cihazdaki \n<xliff:g id="APP">^2</xliff:g> uygulaması kullanılamaz."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Bu <xliff:g id="NAME">^1</xliff:g> nasıl kullanılacak?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"SD kartı dahili depolama için biçimlendirin"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Uygulamaları ve medyaları yalnızca bu tablette kullanacak şekilde depolayın. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kart yapılandırma hakkında daha fazla bilgi&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Biçim"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"SD kartı dahili depolama için biçimlendirin"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Sadece bu telefonda kullanılacak uygulama ve medya dosyalarını depolayın. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kart yapılandırma hakkında daha fazla bilgi&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Biçim"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Veya"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"SD kartı taşınabilir depolama için biçimlendirin"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Fotoğraf, video, müzik ve diğer içerikleri depolayıp bunlara diğer cihazlardan erişin. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD kart yapılandırma hakkında daha fazla bilgi&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Biçim"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Sonra kur"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Bu <xliff:g id="NAME">^1</xliff:g> biçimlendirilsin mi?"</string>
@@ -1845,12 +1854,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"Widget\'ı oluşturmanızdan sonra uygulama görüntülenen her şeye erişebilir.\n\nUygulama: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nWidget: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"<xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> uygulamasına her zaman widget oluşturma ve verilerine erişme izni ver"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"Kullanım istatistikleri"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"Kullanım süresine göre sırala"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"Son kullanılmaya göre sırala"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"Uygulama adına göre sırala"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"Son kullanıldığı tarih"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"Kullanım süresi"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"Erişilebilirlik"</string>
@@ -4766,8 +4772,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Tek etkinlik başına ödüller"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Etkinlik süresince saniye başına ödüller"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"Günlük Maksimum Ödül"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"Uygulama Yükleme"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"En Üstteki Etkinlik"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Bildirim Görüldü"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Bildirim 15 Dakika İçinde Görüldü"</string>
@@ -4829,24 +4834,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Yanlış şifre"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Dinlemeye başlamak için aşağıdaki QR kodunu ortalayın"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"QR kodu geçerli bir biçim değil"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Mobil paket uygulamalar"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Mobil paket uygulamalar"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Mobil paket uygulamalarla ilgili şeffaflık bilgileri"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Reklam içerir"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Geliştirici Bilgileri"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"İletişim Bilgileri"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Açıklama"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Gizlilik Politikası"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Kategori"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"Mobil Paket Uygulama"</string>
 </resources>
