--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -561,8 +561,12 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Ungeze inombolo ephezulu yezigxivizo zeminwe"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Ayikwazi ukwengeza izingxovizo zeminwe eziningi"</string>
     <string name="fingerprint_delete_title" msgid="5412123164503407098">"Sula i-\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\'"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Lokhu kusula izithombe zezigxivizo zeminwe nemodeli ehambisana ne-\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ezigcinwe kwidivayisi yakho"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Ngeke uze ukwazi ukusebenzisa isigxivizo sakho seminwe ukuze uvule ifoni yakho noma uqinisekise ukuthi unguwe kuma-app."</string>
+    <string name="fingerprint_v2_delete_message" product="default" msgid="8310023888801801048">"Lokhu kusula imifanekiso yesigxivizo somunwe nemodeli ehambisana ne-\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' egcinwe kufoni yakho"</string>
+    <string name="fingerprint_v2_delete_message" product="tablet" msgid="114315319294083658">"Lokhu kusula imifanekiso yesigxivizo somunwe nemodeli ehambisana ne-\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' egcinwe kwithebulethi yakho"</string>
+    <string name="fingerprint_v2_delete_message" product="device" msgid="4136720729608391131">"Lokhu kusula izithombe zezigxivizo zeminwe nemodeli ehambisana ne-\'<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\' ezigcinwe kwidivayisi yakho"</string>
+    <string name="fingerprint_last_delete_message" product="default" msgid="7860374760549404410">"Ngeke uze ukwazi ukusebenzisa isigxivizo sakho seminwe ukuze uvule ifoni yakho noma uqinisekise ukuthi unguwe kuma-app."</string>
+    <string name="fingerprint_last_delete_message" product="tablet" msgid="4067899967580007895">"Ngeke uze ukwazi ukusebenzisa isigxivizo sakho somunwe ukuze uvule ithebulethi yakho noma uqinisekise ukuthi unguwe kuma-app."</string>
+    <string name="fingerprint_last_delete_message" product="device" msgid="8582976866145366358">"Ngeke uze ukwazi ukusebenzisa isigxivizo sakho somunwe ukuze uvule idivayisi yakho noma uqinisekise ukuthi unguwe kuma-app."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Ngeke ukwazi ukusebenzisa isigxivizo sakho seminwe ukuze uvule iphrofayela yakho yomsebenzi, ugunyaze ukuthenga, noma ungene ngemvume kuma-app omsebenzi."</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Ukubethelwa"</string>
     <string name="encrypt_title" product="tablet" msgid="6518642273119816435">"Bethela ithebhulethi"</string>
@@ -1092,6 +1096,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Ukucaca okugcwele kusebenzisa ibhethri yakho eyengeziwe. Ukushintsha ukucaca kwakho kungase kubangele amanye ama-app ukuthi aqale kabusha."</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Okukhethiwe"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Imibala"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Kwemvelo"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"I-Boost"</string>
@@ -1304,14 +1309,17 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Ungasusi i-<xliff:g id="NAME">^1</xliff:g> ngesikhathi sokuhambisa. \n\nUhlelo lokusebenza lwe-<xliff:g id="APP">^2</xliff:g> kule divayisi ngeke luze lutholakale kuze kuqedwe ukuhambisa."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Uzoyisebenzisa kanjani le <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Fometha ikhadi le-SD ukuze uthole isitoreji sangaphakathi"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Gcina ama-app nemidiya ongayisebenzisa kule thebulethi kuphela. &lt;a href=https://support.google.com/android/answer/12153449&gt;Funda kabanzi ngokusetha ikhadi le-SD&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Ifomethi"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Fometha ikhadi le-SD ukuze uthole isitoreji sangaphakathi"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Gcina ama-app nemidiya ongayisebenzisa kule foni kuphela. &lt;a href=https://support.google.com/android/answer/12153449&gt;Funda kabanzi ngokusetha ikhadi le-SD&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
+    <skip />
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Ifomethi"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Noma"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Fometha ikhadi le-SD ukuze uthole isitoreji esiphathekayo"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Gcina izithombe, amavidiyo, umculo, nokuningi futhi ukufinyelele kwamanye amadivayisi. &lt;a href=https://support.google.com/android/answer/12153449&gt;Funda kabanzi ngokusetha ikhadi le-SD&lt;/a&gt;"</string>
+    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
+    <skip />
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Ifomethi"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Setha emuva kwesikhathi"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Fomethi le <xliff:g id="NAME">^1</xliff:g>?"</string>
@@ -1846,12 +1854,9 @@
     <string name="allow_bind_app_widget_activity_allow_bind" msgid="5825298768068148804">"Emva kokudala iwijethi, i-application ingafinyelela kukho konke okuboniswayo.\n\nI-application: <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g>\nIwijethi: <xliff:g id="WIDGET_LABEL">%2$s</xliff:g>\n"</string>
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"Ivumele njalo u-<xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> ukuthi enze amawijethi bese efinyelela kwidatha yawo"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"Izibalo zokusetshenziswa"</string>
-    <!-- no translation found for usage_stats_sort_by_usage_time (2927310334119998301) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_last_time_used (7039213339779884017) -->
-    <skip />
-    <!-- no translation found for usage_stats_sort_by_app_name (4463833145514850478) -->
-    <skip />
+    <string name="usage_stats_sort_by_usage_time" msgid="2927310334119998301">"Hlunga ngesikhathi sokusebenzisa"</string>
+    <string name="usage_stats_sort_by_last_time_used" msgid="7039213339779884017">"Hlunga ngesikhathi sokugcina esetshenziswe ngaso"</string>
+    <string name="usage_stats_sort_by_app_name" msgid="4463833145514850478">"Hlunga ngegama le-app"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"Isikhathi sokugcina ukusetshenziswa"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"Isikhathi sokusetshenziswa"</string>
     <string name="accessibility_settings" msgid="4713215774904704682">"Ukufinyeleleka"</string>
@@ -4767,8 +4772,7 @@
     <string name="tare_rewards_instantaneous" msgid="8358683519945340874">"Imiklomelo yomcimbi ngamunye"</string>
     <string name="tare_rewards_ongoing" msgid="7657030286658143416">"Imiklomelo ngomzuzwana ngamunye wobude bomcimbi"</string>
     <string name="tare_rewards_max" msgid="5283055625642837010">"Imiklomelo Ephezulu Ngosuku"</string>
-    <!-- no translation found for tare_app_install (7955806910408116882) -->
-    <skip />
+    <string name="tare_app_install" msgid="7955806910408116882">"Ukufaka i-App"</string>
     <string name="tare_top_activity" msgid="7266560655483385757">"Umsebenzi Ophezulu"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"Isaziso Siboniwe"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"Isaziso Sibonwe Phakathi Nemizuzu eyi-15"</string>
@@ -4830,24 +4834,14 @@
     <string name="find_broadcast_password_dialog_password_error" msgid="243855327674765">"Iphasiwedi engalungile"</string>
     <string name="bt_le_audio_scan_qr_code_scanner" msgid="7614569515419813053">"Ukuze uqale ukulalela, beka ikhodi ye-QR ngezansi"</string>
     <string name="bt_le_audio_qr_code_is_not_valid_format" msgid="7821837654128137901">"Ikhodi ye-QR ayiyona ifomethi evumelekile"</string>
-    <!-- no translation found for mobile_bundled_apps (2489314376883098549) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_title (412673130389310169) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_title (8188809835544175997) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contains_ad_title (6686779781266120431) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_developer_info_title (7072157231818463124) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_contact_title (7799887880660497263) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_description_title (2495042345893715099) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_privacy_policy_title (4168169849635442576) -->
-    <skip />
-    <!-- no translation found for mobile_bundled_apps_details_category_title (2545221739515984464) -->
-    <skip />
-    <!-- no translation found for app_install_details_mba_summary (3279659565492150118) -->
-    <skip />
+    <string name="mobile_bundled_apps" msgid="2489314376883098549">"Ama-app ayinqwaba eselula"</string>
+    <string name="mobile_bundled_apps_title" msgid="412673130389310169">"Ama-app ayinqwaba eselula"</string>
+    <string name="mobile_bundled_apps_details_title" msgid="8188809835544175997">"Ulwazi lwama-app ahlanganisiwe eselula"</string>
+    <string name="mobile_bundled_apps_details_contains_ad_title" msgid="6686779781266120431">"Iqukethe izikhangiso"</string>
+    <string name="mobile_bundled_apps_details_developer_info_title" msgid="7072157231818463124">"Ulwazi lukanjiniyela"</string>
+    <string name="mobile_bundled_apps_details_contact_title" msgid="7799887880660497263">"Imininingwane Yokuxhumana"</string>
+    <string name="mobile_bundled_apps_details_description_title" msgid="2495042345893715099">"Incazelo"</string>
+    <string name="mobile_bundled_apps_details_privacy_policy_title" msgid="4168169849635442576">"Inqubomgomo Yobumfihlo"</string>
+    <string name="mobile_bundled_apps_details_category_title" msgid="2545221739515984464">"Isigaba"</string>
+    <string name="app_install_details_mba_summary" msgid="3279659565492150118">"I-App Ehlanganisiwe Yeselula"</string>
 </resources>
